@@ -1,3 +1,21 @@
+/*
+ *    GeoTools - The Open Source Java GIS Toolkit
+ *    http://geotools.org
+ *
+ *    (C) 2019, Open Source Geospatial Foundation (OSGeo)
+ *
+ *    This library is free software; you can redistribute it and/or
+ *    modify it under the terms of the GNU Lesser General Public
+ *    License as published by the Free Software Foundation;
+ *    version 2.1 of the License.
+ *
+ *    This library is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ *    Lesser General Public License for more details.
+ *
+ */
+
 package org.geotools.maven.xmlcodegen;
 
 import java.io.File;
@@ -29,17 +47,17 @@ import org.opengis.feature.type.Schema;
 public class SchemaGeneratorMojo extends AbstractGeneratorMojo {
 
 	/**
-	 * Flag controlling wether complex types from the schema should be included.
+	 * Flag controlling whether complex types from the schema should be included.
 	 * @parameter expression="true"
 	 */
 	boolean includeComplexTypes;
 	/**
-	 * Flag controlling wether simple types from the schema should be included.
+	 * Flag controlling whether simple types from the schema should be included.
 	 * @parameter expression="true"
 	 */
 	boolean includeSimpleTypes;
 	/**
-	 * Flag controlling wether complex types should be composed of geotools 
+	 * Flag controlling whether complex types should be composed of geotools 
 	 * attribute descriptors which mirror the xml schema particles.
 	 * @parameter expression="true"
 	 */
@@ -50,7 +68,7 @@ public class SchemaGeneratorMojo extends AbstractGeneratorMojo {
 	 */
 	String[] imports;
 	/**
-         * Flag controlling wether paths are printed out as the generator recurses 
+         * Flag controlling whether paths are printed out as the generator recurses 
          * through the schema.
          * @parameter expression="false"
          */
@@ -146,7 +164,7 @@ public class SchemaGeneratorMojo extends AbstractGeneratorMojo {
 		        getLog().info("Loading import schema: " + schemaClassName);
 		        Schema gtSchema = null;
 		        try {
-                    gtSchema = (Schema) schemaClass.newInstance();
+                    gtSchema = (Schema) schemaClass.getDeclaredConstructor().newInstance();
                 } 
 		        catch( Exception e ) {
 		            getLog().error("Could not insantiate class: " + schemaClass.getName());
