@@ -2,7 +2,7 @@
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
  *
- *    (C) 2007-2011, Open Source Geospatial Foundation (OSGeo)
+ *    (C) 2007-2015, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
@@ -33,9 +33,8 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
 import javax.xml.namespace.QName;
-
+import org.geotools.appschema.filter.FilterFactoryImplNamespaceAware;
 import org.geotools.data.DataAccess;
 import org.geotools.data.DataAccessFinder;
 import org.geotools.data.DataUtilities;
@@ -44,20 +43,20 @@ import org.geotools.data.complex.AppSchemaDataAccess;
 import org.geotools.data.complex.AttributeMapping;
 import org.geotools.data.complex.FeatureTypeMapping;
 import org.geotools.data.complex.TestData;
-import org.geotools.data.complex.filter.XPathUtil.Step;
-import org.geotools.data.complex.filter.XPathUtil.StepList;
+import org.geotools.data.complex.feature.type.Types;
+import org.geotools.data.complex.feature.type.UniqueNameFeatureTypeFactoryImpl;
+import org.geotools.data.complex.util.XPathUtil.Step;
+import org.geotools.data.complex.util.XPathUtil.StepList;
 import org.geotools.data.memory.MemoryDataStore;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.feature.FeatureCollection;
 import org.geotools.feature.FeatureIterator;
 import org.geotools.feature.NameImpl;
 import org.geotools.feature.TypeBuilder;
-import org.geotools.feature.Types;
-import org.geotools.feature.type.UniqueNameFeatureTypeFactoryImpl;
-import org.geotools.filter.FilterFactoryImplNamespaceAware;
 import org.geotools.filter.IsEqualsToImpl;
 import org.geotools.filter.OrImpl;
 import org.geotools.filter.spatial.BBOX3DImpl;
+import org.geotools.geometry.jts.JTS;
 import org.geotools.geometry.jts.ReferencedEnvelope3D;
 import org.geotools.gml3.GML;
 import org.geotools.test.AppSchemaTestSupport;
@@ -65,6 +64,9 @@ import org.geotools.xlink.XLINK;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
+import org.locationtech.jts.geom.Polygon;
 import org.opengis.feature.Feature;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.feature.simple.SimpleFeatureType;
@@ -95,18 +97,9 @@ import org.opengis.filter.spatial.BBOX;
 import org.opengis.filter.spatial.Intersects;
 import org.xml.sax.helpers.NamespaceSupport;
 
-import com.vividsolutions.jts.geom.Coordinate;
-import com.vividsolutions.jts.geom.GeometryFactory;
-import com.vividsolutions.jts.geom.Polygon;
-
 /**
- * 
  * @author Gabriel Roldan (Axios Engineering)
  * @version $Id$
- *
- *
- *
- * @source $URL$
  * @since 2.4
  */
 public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
@@ -132,13 +125,14 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         visitor = new UnmappingFilterVisitor(mapping);
         targetDescriptor = mapping.getTargetFeature();
     }
-    
+
     @BeforeClass
     public static void oneTimeSetUp() throws IOException {
         final String schemaBase = "/test-data/";
         final Map dsParams = new HashMap();
-        final URL url = UnmappingFilterVisitorTest.class.getResource(schemaBase
-                + "BoreholeTest_properties.xml");
+        final URL url =
+                UnmappingFilterVisitorTest.class.getResource(
+                        schemaBase + "BoreholeTest_properties.xml");
         dsParams.put("dbtype", "app-schema");
         dsParams.put("url", url.toExternalForm());
 
@@ -149,9 +143,6 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
      * Creates a mapping from the test case simple source to a complex type with an
      * "areaOfInfluence" attribute, which is a buffer over the simple "location" attribute and
      * another which is the concatenation of the attributes "anzlic_no" and "project_no"
-     * 
-     * @return
-     * @throws Exception
      */
     @SuppressWarnings("unchecked")
     private FeatureTypeMapping createSampleDerivedAttributeMappings() throws Exception {
@@ -159,8 +150,8 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         FeatureTypeFactory tf = new UniqueNameFeatureTypeFactoryImpl();
         TypeBuilder builder = new TypeBuilder(tf);
 
-        AttributeType areaOfInfluence = builder.name("areaOfInfluence").bind(Polygon.class)
-                .attribute();
+        AttributeType areaOfInfluence =
+                builder.name("areaOfInfluence").bind(Polygon.class).attribute();
         AttributeType concatType = builder.name("concatenated").bind(String.class).attribute();
 
         builder.setName("target");
@@ -168,8 +159,9 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         builder.addAttribute("concatenated", concatType);
 
         FeatureType targetType = builder.feature();
-        AttributeDescriptor targetFeature = tf.createAttributeDescriptor(targetType, targetType
-                .getName(), 0, Integer.MAX_VALUE, true, null);
+        AttributeDescriptor targetFeature =
+                tf.createAttributeDescriptor(
+                        targetType, targetType.getName(), 0, Integer.MAX_VALUE, true, null);
 
         // create the mapping definition
         List attMappings = new LinkedList();
@@ -178,18 +170,20 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
         Function aoiExpr = ff.function("buffer", ff.property("location"), ff.literal(10));
 
-        attMappings.add(new AttributeMapping(null, aoiExpr, XPath.steps(targetFeature,
-                "areaOfInfluence", namespaces)));
+        attMappings.add(
+                new AttributeMapping(
+                        null, aoiExpr, XPath.steps(targetFeature, "areaOfInfluence", namespaces)));
 
-        Function strConcat = ff.function("strConcat", ff.property("anzlic_no"), ff
-                .property("project_no"));
+        Function strConcat =
+                ff.function("strConcat", ff.property("anzlic_no"), ff.property("project_no"));
 
-        attMappings.add(new AttributeMapping(null, strConcat, XPath.steps(targetFeature,
-                "concatenated", namespaces)));
+        attMappings.add(
+                new AttributeMapping(
+                        null, strConcat, XPath.steps(targetFeature, "concatenated", namespaces)));
 
-        FeatureSource<?,?> simpleSource = mapping.getSource();
-        FeatureTypeMapping mapping = new FeatureTypeMapping(simpleSource, targetFeature,
-                attMappings, namespaces);
+        FeatureSource<?, ?> simpleSource = mapping.getSource();
+        FeatureTypeMapping mapping =
+                new FeatureTypeMapping(simpleSource, targetFeature, attMappings, namespaces);
         return mapping;
     }
 
@@ -205,8 +199,8 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         Filter unrolled = (Filter) fidFilter.accept(visitor, null);
         assertNotNull(unrolled);
 
-        FeatureCollection<SimpleFeatureType,SimpleFeature> results = mapping.getSource()
-                .getFeatures(unrolled);
+        FeatureCollection<SimpleFeatureType, SimpleFeature> results =
+                mapping.getSource().getFeatures(unrolled);
         assertEquals(1, getCount(results));
 
         FeatureIterator<SimpleFeature> features = results.features();
@@ -217,16 +211,16 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         Object object = unmappedFeature.getProperty("station_no").getValue();
         assertEquals(fid, object);
     }
-    
+
     /**
-     * The type of filter that returns should be in a single Or filter OR(a,b,c) instead 
-     * of ((a OR b) or c)
+     * The type of filter that returns should be in a single Or filter OR(a,b,c) instead of ((a OR
+     * b) or c)
      */
     @Test
     public void testUnrollFid() throws Exception {
         Set<FeatureId> fids = new HashSet();
-        String fid1 = "station_no.1";// exists
-        String fid2 = "station_no.500";// doesn't exists
+        String fid1 = "station_no.1"; // exists
+        String fid2 = "station_no.500"; // doesn't exists
         fids.add(ff.featureId(fid1));
         fids.add(ff.featureId(fid2));
         Id fidFilter = ff.id(fids);
@@ -239,13 +233,13 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
             assertTrue(f instanceof IsEqualsToImpl);
         }
 
-        FeatureCollection<SimpleFeatureType, SimpleFeature> results = mapping.getSource()
-                .getFeatures(unrolled);
+        FeatureCollection<SimpleFeatureType, SimpleFeature> results =
+                mapping.getSource().getFeatures(unrolled);
         assertEquals(1, getCount(results));
 
         FeatureIterator<SimpleFeature> features = results.features();
         SimpleFeature unmappedFeature = (SimpleFeature) features.next();
-        
+
         features.close();
 
         assertNotNull(unmappedFeature);
@@ -253,7 +247,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         assertEquals(fid1, object);
     }
 
-    private int getCount(FeatureCollection<?,?> features) {
+    private int getCount(FeatureCollection<?, ?> features) {
         FeatureIterator<?> iterator = features.features();
         int count = 0;
         try {
@@ -284,21 +278,17 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
      */
     @Test
     public void testUnrollGetidToGetid() throws Exception {
-        checkUnrollIdExpression(CommonFactoryFinder.getFilterFactory(null).function("getID",
-                new org.opengis.filter.expression.Expression[0]));
+        checkUnrollIdExpression(
+                CommonFactoryFinder.getFilterFactory(null)
+                        .function("getID", new org.opengis.filter.expression.Expression[0]));
     }
-    
-    /**
-     * Implementation for tests of fid -> fid unmapping.
-     * 
-     * @param idExpression
-     * @throws Exception
-     */
+
+    /** Implementation for tests of fid -> fid unmapping. */
     private void checkUnrollIdExpression(Expression idExpression) throws Exception {
         AttributeMapping featureMapping = null;
         Name featurePath = mapping.getTargetFeature().getName();
         QName featureName = Types.toQName(featurePath);
-        for (Iterator it = mapping.getAttributeMappings().iterator(); it.hasNext();) {
+        for (Iterator it = mapping.getAttributeMappings().iterator(); it.hasNext(); ) {
             AttributeMapping attMapping = (AttributeMapping) it.next();
             StepList targetXPath = attMapping.getTargetXPath();
             if (targetXPath.size() > 1) {
@@ -312,24 +302,24 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         }
         featureMapping.setIdentifierExpression(idExpression);
         this.visitor = new UnmappingFilterVisitor(this.mapping);
-        
+
         // retrieve a single sample feature
-        Feature sourceFeature = DataUtilities.first( mapping.getSource().getFeatures() );
+        Feature sourceFeature = DataUtilities.first(mapping.getSource().getFeatures());
         String fid = sourceFeature.getIdentifier().toString();
         Id fidFilter = ff.id(Collections.singleton(ff.featureId(fid)));
         Filter unrolled = (Filter) fidFilter.accept(visitor, null);
         assertNotNull(unrolled);
         assertTrue(unrolled instanceof Id);
 
-        FeatureCollection<SimpleFeatureType,SimpleFeature> results = mapping.getSource()
-                .getFeatures(unrolled);
+        FeatureCollection<SimpleFeatureType, SimpleFeature> results =
+                mapping.getSource().getFeatures(unrolled);
         assertEquals(1, getCount(results));
-        
-        SimpleFeature unmappedFeature =  DataUtilities.first( results);
-        
+
+        SimpleFeature unmappedFeature = DataUtilities.first(results);
+
         assertEquals(fid, unmappedFeature.getID());
     }
-    
+
     @Test
     public void testPropertyName() throws Exception {
         PropertyName ae = ff.property("/wq_plus/measurement/result");
@@ -373,17 +363,15 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
     /**
      * An xpath expression may target a "client property" mapping (in xml land, an xml attribute
      * rather than a xml element).
-     * 
-     * @throws Exception
      */
     @Test
     public void testPropertyNameWithXlinkAttribute() throws Exception {
         final String XMMLNS = "http://www.opengis.net/xmml";
         final Name typeName = new NameImpl(XMMLNS, "Borehole");
-        
+
         AppSchemaDataAccess complexDs = (AppSchemaDataAccess) mappingDataStore;
-        
-        mapping = complexDs.getMappingByElement(typeName);
+
+        mapping = complexDs.getMappingByNameOrElement(typeName);
 
         NamespaceSupport namespaces = new NamespaceSupport();
         namespaces.declarePrefix("gml", GML.NAMESPACE);
@@ -396,7 +384,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
         visitor = new UnmappingFilterVisitor(mapping);
 
-        List /* <Expression> */unrolled = (List) propNameExpression.accept(visitor, null);
+        List /* <Expression> */ unrolled = (List) propNameExpression.accept(visitor, null);
         assertNotNull(unrolled);
         assertEquals(1, unrolled.size());
         assertTrue(unrolled.get(0) instanceof Expression);
@@ -405,8 +393,6 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
     /**
      * An x-path expression may target a "client property" mapping (in xml land, an xml attribute
      * rather than a xml element).
-     * 
-     * @throws Exception
      */
     @Test
     public void testPropertyNameWithGmlIdAttribute() throws Exception {
@@ -415,7 +401,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
         AppSchemaDataAccess complexDs = (AppSchemaDataAccess) mappingDataStore;
 
-        mapping = complexDs.getMappingByElement(typeName);
+        mapping = complexDs.getMappingByNameOrElement(typeName);
 
         NamespaceSupport namespaces = new NamespaceSupport();
         namespaces.declarePrefix("gml", GML.NAMESPACE);
@@ -428,7 +414,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         String xpathExpression = "@gml:id";
         PropertyName propNameExpression = ff.property(xpathExpression);
 
-        List /* <Expression> */unrolled = (List) propNameExpression.accept(visitor, null);
+        List /* <Expression> */ unrolled = (List) propNameExpression.accept(visitor, null);
         assertNotNull(unrolled);
         assertEquals(1, unrolled.size());
         assertTrue(unrolled.get(0) instanceof Expression);
@@ -455,8 +441,12 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
     @Test
     public void testBetweenFilter() throws Exception {
-        PropertyIsBetween bf = ff.between(ff.property("measurement/result"), ff.literal(1), ff
-                .literal(2), MatchAction.ALL);
+        PropertyIsBetween bf =
+                ff.between(
+                        ff.property("measurement/result"),
+                        ff.literal(1),
+                        ff.literal(2),
+                        MatchAction.ALL);
 
         PropertyIsBetween unrolled = (PropertyIsBetween) bf.accept(visitor, null);
         assertEquals(MatchAction.ALL, ((PropertyIsBetween) unrolled).getMatchAction());
@@ -464,12 +454,12 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         assertTrue(att instanceof PropertyName);
         String propertyName = ((PropertyName) att).getPropertyName();
         assertEquals("results_value", propertyName);
-    }       
+    }
 
     @Test
     public void testCompareFilter() throws Exception {
-        PropertyIsEqualTo complexFilter = ff.equal(ff.property("measurement/result"), ff
-                .literal(1.1), true, MatchAction.ALL);
+        PropertyIsEqualTo complexFilter =
+                ff.equal(ff.property("measurement/result"), ff.literal(1.1), true, MatchAction.ALL);
 
         Filter unrolled = (Filter) complexFilter.accept(visitor, null);
         assertNotNull(unrolled);
@@ -486,46 +476,46 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         PropertyName attExp = (PropertyName) left;
         String expectedAtt = "results_value";
         assertEquals(expectedAtt, attExp.getPropertyName());
-        assertEquals(new Double(1.1), ((Literal) right).getValue());
+        assertEquals(Double.valueOf(1.1), ((Literal) right).getValue());
     }
 
     /**
      * There might be multiple mappings per propery name, like <code>gml:name[1] = att1</code>,
      * <code>gml:name2 = strConcat(att2, att3)</code>, <code>gml:name[3] = "sampleValue</code>.
-     * <p>
-     * In the BoreHole test mapping used here, the following mappings exist for gml:name:
+     *
+     * <p>In the BoreHole test mapping used here, the following mappings exist for gml:name:
+     *
      * <ul>
-     * <li>gml:name[1] = strConcat( strConcat(QS, strConcat("/", RT)), strConcat(strConcat("/",
-     * NUMB), strConcat("/", BSUFF)) )</li>
-     * <li>gml:name[2] = BGS_ID</li>
-     * <li>gml:name[3] = NAME</li>
-     * <li>gml:name[4] = ORIGINAL_N</li>
+     *   <li>gml:name[1] = strConcat( strConcat(QS, strConcat("/", RT)), strConcat(strConcat("/",
+     *       NUMB), strConcat("/", BSUFF)) )
+     *   <li>gml:name[2] = BGS_ID
+     *   <li>gml:name[3] = NAME
+     *   <li>gml:name[4] = ORIGINAL_N
      * </ul>
-     * 
-     * This means the "unrolled" filter for <code>gml:name = "SWADLINCOTE"</code> should be
-     * <code>strConcat( strConcat(QS, ...) = "SWADLINCOTE" 
-     *          OR BGS_ID = "SWADLINCOTE" 
-     *          OR NAME = "SWADLINCOTE" 
+     *
+     * This means the "unrolled" filter for <code>gml:name = "SWADLINCOTE"</code> should be <code>
+     * strConcat( strConcat(QS, ...) = "SWADLINCOTE"
+     *          OR BGS_ID = "SWADLINCOTE"
+     *          OR NAME = "SWADLINCOTE"
      *          OR ORIGINAL_N = "SWADLINCOTE"</code>
+     *
      * <p>
-     * 
-     * @throws Exception
      */
     @Test
     public void testCompareFilterMultipleMappingsPerPropertyName() throws Exception {
         final String XMMLNS = "http://www.opengis.net/xmml";
         final Name typeName = new NameImpl(XMMLNS, "Borehole");
-        
+
         AppSchemaDataAccess complexDs = (AppSchemaDataAccess) mappingDataStore;
-        mapping = complexDs.getMappingByElement(typeName);
+        mapping = complexDs.getMappingByNameOrElement(typeName);
 
         NamespaceSupport namespaces = new NamespaceSupport();
         namespaces.declarePrefix("gml", GML.NAMESPACE);
         namespaces.declarePrefix("xmml", XMMLNS);
 
         FilterFactory2 ff = new FilterFactoryImplNamespaceAware(namespaces);
-        PropertyIsEqualTo complexFilter = ff.equals(ff.property("gml:name"), ff
-                .literal("SWADLINCOTE"));
+        PropertyIsEqualTo complexFilter =
+                ff.equals(ff.property("gml:name"), ff.literal("SWADLINCOTE"));
 
         visitor = new UnmappingFilterVisitor(mapping);
 
@@ -561,14 +551,14 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
         assertEquals("BGS_ID", ((PropertyName) filter2.getExpression1()).getPropertyName());
         assertEquals("NAME", ((PropertyName) filter3.getExpression1()).getPropertyName());
-        assertEquals("ORIGINAL_N", ((PropertyName) filter4.getExpression1()).getPropertyName());        
+        assertEquals("ORIGINAL_N", ((PropertyName) filter4.getExpression1()).getPropertyName());
     }
 
     @Test
     public void testLogicFilterAnd() throws Exception {
         PropertyIsEqualTo equals = ff.equals(ff.property("measurement/result"), ff.literal(1.1));
-        PropertyIsGreaterThan greater = ff.greater(ff
-                .property("measurement/determinand_description"), ff.literal("desc1"));
+        PropertyIsGreaterThan greater =
+                ff.greater(ff.property("measurement/determinand_description"), ff.literal("desc1"));
 
         And logicFilter = ff.and(equals, greater);
 
@@ -589,7 +579,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         assertTrue(right instanceof Literal);
 
         assertEquals("results_value", ((PropertyName) left).getPropertyName());
-        assertEquals(new Double(1.1), ((Literal) right).getValue());
+        assertEquals(Double.valueOf(1.1), ((Literal) right).getValue());
 
         Filter sourceGreater = (Filter) sourceAnd.getChildren().get(1);
         assertTrue(sourceGreater instanceof PropertyIsGreaterThan);
@@ -605,9 +595,11 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
     @Test
     public void testFunction() throws Exception {
-        Function fe = ff.function("strIndexOf",
-                ff.property("/measurement/determinand_description"), ff
-                        .literal("determinand_description_1"));
+        Function fe =
+                ff.function(
+                        "strIndexOf",
+                        ff.property("/measurement/determinand_description"),
+                        ff.literal("determinand_description_1"));
 
         List unrolledExpressions = (List) fe.accept(visitor, null);
 
@@ -626,8 +618,8 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         targetDescriptor = mapping.getTargetFeature();
         targetType = (FeatureType) targetDescriptor.getType();
 
-        Expression literalGeom = ff
-                .literal(new GeometryFactory().createPoint(new Coordinate(1, 1)));
+        Expression literalGeom =
+                ff.literal(new GeometryFactory().createPoint(new Coordinate(1, 1)));
 
         Intersects gf = ff.intersects(ff.property("areaOfInfluence"), literalGeom, MatchAction.ALL);
 
@@ -655,8 +647,15 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         final String wildcard = "%";
         final String single = "?";
         final String escape = "\\";
-        PropertyIsLike like = ff.like(ff.property("/measurement/determinand_description"),
-                "%n_1_1", wildcard, single, escape, true, MatchAction.ONE);
+        PropertyIsLike like =
+                ff.like(
+                        ff.property("/measurement/determinand_description"),
+                        "%n_1_1",
+                        wildcard,
+                        single,
+                        escape,
+                        true,
+                        MatchAction.ONE);
 
         PropertyIsLike unmapped = (PropertyIsLike) like.accept(visitor, null);
         assertEquals(like.getLiteral(), unmapped.getLiteral());
@@ -670,10 +669,10 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         assertTrue(unmappedExpr instanceof PropertyName);
         assertEquals("determinand_description", ((PropertyName) unmappedExpr).getPropertyName());
     }
-    
+
     @Test
     public void testLiteralExpression() throws Exception {
-        Expression literal = ff.literal(new Integer(0));
+        Expression literal = ff.literal(Integer.valueOf(0));
         List unrolledExpressions = (List) literal.accept(visitor, null);
         assertEquals(1, unrolledExpressions.size());
         assertSame(literal, unrolledExpressions.get(0));
@@ -687,12 +686,14 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
     private void testLogicFilter(Class<?> filterType) throws Exception {
         BinaryLogicOperator complexLogicFilter;
-        PropertyIsGreaterThan resultFilter = ff.greater(ff.property("measurement/result"), ff
-                .literal(new Integer(5)));
+        PropertyIsGreaterThan resultFilter =
+                ff.greater(ff.property("measurement/result"), ff.literal(Integer.valueOf(5)));
 
-        PropertyIsBetween determFilter = ff.between(ff
-                .property("measurement/determinand_description"), ff
-                .literal("determinand_description_1_1"), ff.literal("determinand_description_3_3"));
+        PropertyIsBetween determFilter =
+                ff.between(
+                        ff.property("measurement/determinand_description"),
+                        ff.literal("determinand_description_1_1"),
+                        ff.literal("determinand_description_3_3"));
 
         if (And.class.equals(filterType)) {
             complexLogicFilter = ff.and(resultFilter, determFilter);
@@ -715,22 +716,26 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         PropertyIsGreaterThan unmappedResult = (PropertyIsGreaterThan) children.get(0);
         PropertyIsBetween unmappedDeterm = (PropertyIsBetween) children.get(1);
 
-        assertEquals("results_value", ((PropertyName) unmappedResult.getExpression1())
-                .getPropertyName());
+        assertEquals(
+                "results_value",
+                ((PropertyName) unmappedResult.getExpression1()).getPropertyName());
 
-        assertEquals(new Integer(5), ((Literal) unmappedResult.getExpression2()).getValue());
+        assertEquals(Integer.valueOf(5), ((Literal) unmappedResult.getExpression2()).getValue());
 
-        assertEquals("determinand_description", ((PropertyName) unmappedDeterm.getExpression())
-                .getPropertyName());
-        assertEquals("determinand_description_1_1", ((Literal) unmappedDeterm.getLowerBoundary())
-                .getValue());
-        assertEquals("determinand_description_3_3", ((Literal) unmappedDeterm.getUpperBoundary())
-                .getValue());
+        assertEquals(
+                "determinand_description",
+                ((PropertyName) unmappedDeterm.getExpression()).getPropertyName());
+        assertEquals(
+                "determinand_description_1_1",
+                ((Literal) unmappedDeterm.getLowerBoundary()).getValue());
+        assertEquals(
+                "determinand_description_3_3",
+                ((Literal) unmappedDeterm.getUpperBoundary()).getValue());
     }
 
     @Test
     public void testMathExpression() throws Exception {
-        Literal literal = ff.literal(new Integer(2));
+        Literal literal = ff.literal(Integer.valueOf(2));
         Multiply mathExp = ff.multiply(ff.property("measurement/result"), literal);
 
         List unrolledExpressions = (List) mathExp.accept(visitor, null);
@@ -758,25 +763,18 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         assertTrue(unmappedAtt instanceof PropertyName);
         assertEquals("results_value", ((PropertyName) unmappedAtt).getPropertyName());
     }
-    
+
     @Test
     public void testBBox3D() throws Exception {
-    	BBOX bbox = ff.bbox("location", new ReferencedEnvelope3D(0, 10, 20, 50, 60, 70, null));
-    	
-    	assertTrue(bbox instanceof BBOX3DImpl);
-    	BBOX3DImpl bbox3d = (BBOX3DImpl) bbox;
-    	
-    	Filter unrolled = (Filter) bbox.accept(visitor, null);
-    	
-    	assertTrue(unrolled instanceof BBOX3DImpl);
-    	BBOX3DImpl unrolled3d = (BBOX3DImpl) unrolled;
-    	assertEquals(bbox3d.getMinX(), unrolled3d.getMinX(), 0.0);
-    	assertEquals(bbox3d.getMaxX(), unrolled3d.getMaxX(), 0.0);
-    	assertEquals(bbox3d.getMinY(), unrolled3d.getMinY(), 0.0);
-    	assertEquals(bbox3d.getMaxY(), unrolled3d.getMaxY(), 0.0);
-    	assertEquals(bbox3d.getMinZ(), unrolled3d.getMinZ(), 0.0);
-    	assertEquals(bbox3d.getMaxZ(), unrolled3d.getMaxZ(), 0.0);
-    	
-    }
+        BBOX bbox = ff.bbox("location", new ReferencedEnvelope3D(0, 10, 20, 50, 60, 70, null));
 
+        assertTrue(bbox instanceof BBOX3DImpl);
+        BBOX3DImpl bbox3d = (BBOX3DImpl) bbox;
+
+        Filter unrolled = (Filter) bbox.accept(visitor, null);
+
+        assertTrue(unrolled instanceof BBOX3DImpl);
+        BBOX3DImpl unrolled3d = (BBOX3DImpl) unrolled;
+        assertTrue(JTS.equals(bbox3d.getBounds(), unrolled3d.getBounds(), 0));
+    }
 }
