@@ -18,16 +18,16 @@ package org.geotools.xs.bindings;
 
 import java.math.BigInteger;
 import javax.xml.namespace.QName;
-import org.geotools.xml.InstanceComponent;
-import org.geotools.xml.SimpleBinding;
 import org.geotools.xs.XS;
-
+import org.geotools.xsd.InstanceComponent;
+import org.geotools.xsd.SimpleBinding;
 
 /**
  * Binding object for the type http://www.w3.org/2001/XMLSchema:nonNegativeInteger.
  *
  * <p>
- *        <pre>
+ *
+ * <pre>
  *         <code>
  *  &lt;xs:simpleType name="nonNegativeInteger" id="nonNegativeInteger"&gt;
  *      &lt;xs:annotation&gt;
@@ -40,26 +40,20 @@ import org.geotools.xs.XS;
  *
  *          </code>
  *         </pre>
- * </p>
  *
  * @generated
- *
- *
- *
- * @source $URL$
  */
 public class XSNonNegativeIntegerBinding implements SimpleBinding {
     final BigInteger MAX_LONG = BigInteger.valueOf(Long.MAX_VALUE);
     final BigInteger MAX_INTEGER = BigInteger.valueOf(Integer.MAX_VALUE);
 
-    /**
-     * @generated
-     */
+    /** @generated */
     public QName getTarget() {
         return XS.NONNEGATIVEINTEGER;
     }
 
     /**
+     *
      * <!-- begin-user-doc -->
      * <!-- end-user-doc -->
      *
@@ -70,6 +64,7 @@ public class XSNonNegativeIntegerBinding implements SimpleBinding {
     }
 
     /**
+     *
      * <!-- begin-user-doc -->
      * This binding returns objects of type {@link Number.class}.
      * <!-- end-user-doc -->
@@ -81,40 +76,40 @@ public class XSNonNegativeIntegerBinding implements SimpleBinding {
     }
 
     /**
+     *
      * <!-- begin-user-doc -->
      * Restriction of integer to non negative values.
-     * <p>
-     * Please just treat this as a Number, actual value returned
-     * may be BigInteger or Long or Integer.
-     * </p>
+     *
+     * <p>Please just treat this as a Number, actual value returned may be BigInteger or Long or
+     * Integer.
+     *
      * @param instance with text to be parsed
      * @param value BigInteger from parent XSIntegerStratagy
      * @return Number positive in range 0 to Integer.MAX_INT
-     * <!-- end-user-doc -->
-     *
+     *     <!-- end-user-doc -->
      * @generated modifiable
      */
-    public Object parse(InstanceComponent instance, Object value)
-        throws Exception {
+    public Object parse(InstanceComponent instance, Object value) throws Exception {
         BigInteger number = (BigInteger) value;
 
         if (BigInteger.ZERO.compareTo(number) > 0) {
-            throw new IllegalArgumentException("Value '" + number
-                + "' must be non-negative (0 or above).");
+            throw new IllegalArgumentException(
+                    "Value '" + number + "' must be non-negative (0 or above).");
         }
 
         if (MAX_INTEGER.compareTo(number) >= 0) {
-            return new Integer(number.intValue());
+            return Integer.valueOf(number.intValue());
         }
 
         if (MAX_LONG.compareTo(number) >= 0) {
-            return new Long(number.longValue());
+            return Long.valueOf(number.longValue());
         }
 
         return number;
     }
 
     /**
+     *
      * <!-- begin-user-doc -->
      * <!-- end-user-doc -->
      *
@@ -124,8 +119,8 @@ public class XSNonNegativeIntegerBinding implements SimpleBinding {
         Number number = (Number) object;
 
         if (number.longValue() < 0) {
-            throw new IllegalArgumentException("Value '" + number
-                + "' must be non-negative (0 or above).");
+            throw new IllegalArgumentException(
+                    "Value '" + number + "' must be non-negative (0 or above).");
         }
 
         return value;
