@@ -1,9 +1,9 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
- *    (C) 2005-2008, Open Source Geospatial Foundation (OSGeo)
- *    
+ *
+ *    (C) 2005 - 2016, Open Source Geospatial Foundation (OSGeo)
+ *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
  *    License as published by the Free Software Foundation;
@@ -16,10 +16,15 @@
  */
 package org.geotools.coverage.grid.io;
 
+import it.geosolutions.imageio.core.CoreCommonImageMetadata;
+import it.geosolutions.imageio.maskband.DatasetLayout;
+import it.geosolutions.imageio.maskband.DefaultDatasetLayoutImpl;
+import it.geosolutions.jaiext.utilities.ImageLayout2;
 import java.awt.Rectangle;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Rectangle2D;
 import java.awt.image.ColorModel;
+import java.awt.image.RenderedImage;
 import java.awt.image.SampleModel;
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -34,15 +39,14 @@ import java.util.Map;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
 import javax.imageio.ImageReadParam;
 import javax.imageio.ImageReader;
 import javax.imageio.ImageTypeSpecifier;
+import javax.imageio.metadata.IIOMetadata;
 import javax.imageio.spi.ImageInputStreamSpi;
 import javax.imageio.stream.ImageInputStream;
 import javax.media.jai.ImageLayout;
 import javax.media.jai.PlanarImage;
-
 import org.geotools.coverage.CoverageFactoryFinder;
 import org.geotools.coverage.GridSampleDimension;
 import org.geotools.coverage.TypeMap;
@@ -50,21 +54,29 @@ import org.geotools.coverage.grid.GeneralGridEnvelope;
 import org.geotools.coverage.grid.GridCoverage2D;
 import org.geotools.coverage.grid.GridCoverageFactory;
 import org.geotools.coverage.grid.GridEnvelope2D;
+import org.geotools.coverage.grid.io.footprint.MultiLevelROIProvider;
+import org.geotools.coverage.util.CoverageUtilities;
 import org.geotools.data.DataSourceException;
+import org.geotools.data.DefaultFileResourceInfo;
+import org.geotools.data.DefaultFileServiceInfo;
+import org.geotools.data.DefaultResourceInfo;
 import org.geotools.data.DefaultServiceInfo;
+import org.geotools.data.FileGroupProvider.FileGroup;
+import org.geotools.data.ResourceInfo;
 import org.geotools.data.ServiceInfo;
-import org.geotools.factory.GeoTools;
-import org.geotools.factory.Hints;
 import org.geotools.geometry.GeneralEnvelope;
+import org.geotools.metadata.i18n.ErrorKeys;
+import org.geotools.metadata.i18n.Errors;
 import org.geotools.referencing.CRS;
 import org.geotools.referencing.operation.builder.GridToEnvelopeMapper;
+import org.geotools.referencing.operation.matrix.XAffineTransform;
 import org.geotools.referencing.operation.transform.IdentityTransform;
 import org.geotools.referencing.operation.transform.ProjectiveTransform;
-import org.geotools.resources.i18n.ErrorKeys;
-import org.geotools.resources.i18n.Errors;
+import org.geotools.util.URLs;
 import org.geotools.util.Utilities;
+import org.geotools.util.factory.GeoTools;
+import org.geotools.util.factory.Hints;
 import org.geotools.util.logging.Logging;
-import org.jaitools.imageutils.ImageLayout2;
 import org.opengis.coverage.ColorInterpretation;
 import org.opengis.coverage.grid.Format;
 import org.opengis.coverage.grid.GridCoverage;
@@ -77,33 +89,35 @@ import org.opengis.parameter.ParameterNotFoundException;
 import org.opengis.referencing.FactoryException;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 import org.opengis.referencing.datum.PixelInCell;
+import org.opengis.referencing.operation.CoordinateOperation;
+import org.opengis.referencing.operation.CoordinateOperationFactory;
 import org.opengis.referencing.operation.MathTransform;
 import org.opengis.referencing.operation.TransformException;
 
 /**
- * This class is a first attempt for providing a way to get more informations out of a single 2D raster datasets (x,y). It is worth to remark that for
- * the moment this is thought for 2D rasters not for 3D or 4D rasters (x,y,z,t).
- * 
- * <p>
- * The main drawback I see with the current GeoApi GridCoverageReader interface is that there is no way to get real information about a raster source
- * unless you instantiate a GridCoverage. As an instance it is impossible to know the envelope, the number of overviews, the tile size. This
+ * This class is a first attempt for providing a way to get more informations out of a single 2D
+ * raster datasets (x,y). It is worth to remark that for the moment this is thought for 2D rasters
+ * not for 3D or 4D rasters (x,y,z,t).
+ *
+ * <p>The main drawback I see with the current GeoApi GridCoverageReader interface is that there is
+ * no way to get real information about a raster source unless you instantiate a GridCoverage. As an
+ * instance it is impossible to know the envelope, the number of overviews, the tile size. This
  * information is needed in order to perform decimation on reading or to use built-in overviews<br>
- * This really impacts the ability to exploit raster datasets in a desktop environment where caching is crucial.
- * 
+ * This really impacts the ability to exploit raster datasets in a desktop environment where caching
+ * is crucial.
+ *
  * @author Simone Giannecchini, GeoSolutions
  * @since 2.3
- * 
- * 
- * @source $URL$
  */
 public abstract class AbstractGridCoverage2DReader implements GridCoverage2DReader {
 
     /** The {@link Logger} for this {@link AbstractGridCoverage2DReader}. */
-    private final static Logger LOGGER = Logging.getLogger("org.geotools.data.coverage.grid");
+    private static final Logger LOGGER = Logging.getLogger(AbstractGridCoverage2DReader.class);
 
-    /**
-     * This contains the number of overviews.aaa
-     */
+    /** Small number used for double comparisons */
+    protected static double EPS = 1e-6;
+
+    /** This contains the number of overviews.aaa */
     protected int numOverviews = 0;
 
     /** 2DGridToWorld math transform. */
@@ -124,55 +138,52 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     /** Hints used by the {@link AbstractGridCoverage2DReader} subclasses. */
     protected Hints hints = GeoTools.getDefaultHints();
 
-    /**
-     * Highest resolution availaible for this reader.
-     */
+    /** Highest resolution available for this reader. */
     protected double[] highestRes = null;
 
     /** Temp variable used in many readers. */
     protected boolean closeMe;
 
-    /**
-     * In case we are trying to read from a GZipped file this will be set to true.
-     */
+    /** In case we are trying to read from a GZipped file this will be set to true. */
     protected boolean gzipped;
 
-    /**
-     * The original {@link GridRange} for the {@link GridCoverage2D} of this reader.
-     */
+    /** The original {@link GridRange} for the {@link GridCoverage2D} of this reader. */
     protected GridEnvelope originalGridRange = null;
 
     /**
-     * Input stream that can be used to initialize subclasses of {@link AbstractGridCoverage2DReader}.
+     * Input stream that can be used to initialize subclasses of {@link
+     * AbstractGridCoverage2DReader}.
      */
     protected ImageInputStream inStream = null;
 
     /** Resolutions avialaible through an overviews based mechanism. */
     protected double[][] overViewResolutions = null;
 
-    /**
-     * {@link GridCoverageFactory} instance.
-     */
+    /** {@link GridCoverageFactory} instance. */
     protected GridCoverageFactory coverageFactory;
 
-    private Map<String,ArrayList<Resolution>> resolutionsLevelsMap = new HashMap<String,ArrayList<Resolution>>();
+    /** scales and offsets for rescaling */
+    protected Double[] scales;
+
+    protected Double[] offsets;
+
+    private Map<String, ArrayList<Resolution>> resolutionsLevelsMap =
+            new HashMap<String, ArrayList<Resolution>>();
 
     protected ImageInputStreamSpi inStreamSPI;
 
     private ImageLayout imageLayout;
 
-    /**
-     * Default protected constructor. Useful for wrappers.
-     */
-    protected AbstractGridCoverage2DReader() {
+    /** Coverage {@link DatasetLayout} containing information about Overviews and Mask management */
+    protected DatasetLayout dtLayout;
 
-    }
+    /** Default protected constructor. Useful for wrappers. */
+    protected AbstractGridCoverage2DReader() {}
 
     /**
      * Creates a new instance of a {@link AIGReader}. I assume nothing about file extension.
-     * 
+     *
      * @param input Source object for which we want to build an {@link AIGReader}.
-     * @throws DataSourceException
      */
     public AbstractGridCoverage2DReader(Object input) throws DataSourceException {
         this(input, null);
@@ -180,21 +191,18 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Creates a new instance of a {@link AIGReader}. I assume nothing about file extension.
-     * 
+     *
      * @param input Source object for which we want to build an {@link AIGReader}.
      * @param hints Hints to be used by this reader throughout his life.
-     * @throws DataSourceException
      */
     public AbstractGridCoverage2DReader(Object input, Hints hints) throws DataSourceException {
 
         //
         // basic management of hints
         //
-        if (hints == null)
-            this.hints = new Hints();
+        if (hints == null) this.hints = new Hints();
         if (hints != null) {
             this.hints = hints.clone();
-
         }
 
         // GridCoverageFactory initialization
@@ -212,19 +220,20 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         // Setting input
         //
         if (input == null) {
-            final IOException ex = new IOException(Errors.format(ErrorKeys.NULL_ARGUMENT_$1,
-                    "input"));
+            final IOException ex =
+                    new IOException(Errors.format(ErrorKeys.NULL_ARGUMENT_$1, "input"));
             throw new DataSourceException(ex);
         }
         this.source = input;
-
     }
 
     /**
-     * This method is responsible for checking the provided coverage name against the coverage name for this {@link GridCoverage2DReader}.
-     * 
+     * This method is responsible for checking the provided coverage name against the coverage name
+     * for this {@link GridCoverage2DReader}.
+     *
      * @param coverageName the coverage name to check.
-     * @return <code>true</code> if this {@link GridCoverage2DReader} contains the provided coverage name, <code>false</code> otherwise.
+     * @return <code>true</code> if this {@link GridCoverage2DReader} contains the provided coverage
+     *     name, <code>false</code> otherwise.
      */
     protected boolean checkName(String coverageName) {
         Utilities.ensureNonNull("coverageName", coverageName);
@@ -239,31 +248,34 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
             return read(parameters);
         }
         // Subclasses should do more checks on coverageName
-        throw new IllegalArgumentException("The specified coverageName " + coverageName
-                + "is not supported");
+        throw new IllegalArgumentException(
+                "The specified coverageName " + coverageName + "is not supported");
     }
 
     /**
      * Read the current grid coverage from the stream.
-     * <p>
-     * Example:
-     * 
+     *
+     * <p>Example:
+     *
      * <pre>
      * <code>
      * </code>
      * </pre>
-     * 
-     * The method {@link #hasMoreGridCoverages} should be invoked first in order to verify that a coverage is available.
-     * 
+     *
      * @param parameters Optional parameters matching {@link Format#getReadParameters}.
      * @return a {@linkplain GridCoverage grid coverage} from the input source.
-     * @throws InvalidParameterNameException if a parameter in {@code parameters} doesn't have a recognized name.
-     * @throws InvalidParameterValueException if a parameter in {@code parameters} doesn't have a valid value.
-     * @throws ParameterNotFoundException if a parameter was required for the operation but was not provided in the {@code parameters} list.
-     * @throws CannotCreateGridCoverageException if the coverage can't be created for a logical reason (for example an unsupported format, or an
-     *         inconsistency found in the data).
-     * @throws IOException if a read operation failed for some other input/output reason, including {@link FileNotFoundException} if no file with the
-     *         given {@code name} can be found, or {@link javax.imageio.IIOException} if an error was thrown by the underlying image library.
+     * @throws InvalidParameterNameException if a parameter in {@code parameters} doesn't have a
+     *     recognized name.
+     * @throws InvalidParameterValueException if a parameter in {@code parameters} doesn't have a
+     *     valid value.
+     * @throws ParameterNotFoundException if a parameter was required for the operation but was not
+     *     provided in the {@code parameters} list.
+     * @throws CannotCreateGridCoverageException if the coverage can't be created for a logical
+     *     reason (for example an unsupported format, or an inconsistency found in the data).
+     * @throws IOException if a read operation failed for some other input/output reason, including
+     *     {@link FileNotFoundException} if no file with the given {@code name} can be found, or
+     *     {@link javax.imageio.IIOException} if an error was thrown by the underlying image
+     *     library.
      */
     public abstract GridCoverage2D read(GeneralParameterValue[] parameters)
             throws IllegalArgumentException, IOException;
@@ -275,50 +287,58 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     // -------------------------------------------------------------------------
 
     /**
-     * This method is responsible for preparing the read param for doing an {@link ImageReader#read(int, ImageReadParam)}.
-     * 
-     * 
-     * <p>
-     * This method is responsible for preparing the read param for doing an {@link ImageReader#read(int, ImageReadParam)}. It sets the passed
-     * {@link ImageReadParam} in terms of decimation on reading using the provided requestedEnvelope and requestedDim to evaluate the needed
-     * resolution. It also returns and {@link Integer} representing the index of the raster to be read when dealing with multipage raster.
-     * 
-     * @param overviewPolicy it can be one of {@link Hints#VALUE_OVERVIEW_POLICY_IGNORE}, {@link Hints#VALUE_OVERVIEW_POLICY_NEAREST},
-     *        {@link Hints#VALUE_OVERVIEW_POLICY_QUALITY} or {@link Hints#VALUE_OVERVIEW_POLICY_SPEED}. It specifies the policy to compute the
-     *        overviews level upon request.
+     * This method is responsible for preparing the read param for doing an {@link
+     * ImageReader#read(int, ImageReadParam)}.
+     *
+     * <p>This method is responsible for preparing the read param for doing an {@link
+     * ImageReader#read(int, ImageReadParam)}. It sets the passed {@link ImageReadParam} in terms of
+     * decimation on reading using the provided requestedEnvelope and requestedDim to evaluate the
+     * needed resolution. It also returns and {@link Integer} representing the index of the raster
+     * to be read when dealing with multipage raster.
+     *
+     * @param overviewPolicy it can be one of {@link Hints#VALUE_OVERVIEW_POLICY_IGNORE}, {@link
+     *     Hints#VALUE_OVERVIEW_POLICY_NEAREST}, {@link Hints#VALUE_OVERVIEW_POLICY_QUALITY} or
+     *     {@link Hints#VALUE_OVERVIEW_POLICY_SPEED}. It specifies the policy to compute the
+     *     overviews level upon request.
      * @param readP an instance of {@link ImageReadParam} for setting the subsampling factors.
      * @param requestedEnvelope the {@link GeneralEnvelope} we are requesting.
      * @param requestedDim the requested dimensions.
      * @return the index of the raster to read in the underlying data source.
-     * @throws IOException
-     * @throws TransformException
      */
-    protected Integer setReadParams(OverviewPolicy overviewPolicy, ImageReadParam readP,
-            GeneralEnvelope requestedEnvelope, Rectangle requestedDim) throws IOException, TransformException {
+    protected Integer setReadParams(
+            OverviewPolicy overviewPolicy,
+            ImageReadParam readP,
+            GeneralEnvelope requestedEnvelope,
+            Rectangle requestedDim)
+            throws IOException, TransformException {
         return setReadParams(coverageName, overviewPolicy, readP, requestedEnvelope, requestedDim);
     }
 
     /**
-     * This method is responsible for preparing the read param for doing an {@link ImageReader#read(int, ImageReadParam)}.
-     * 
-     * 
-     * <p>
-     * This method is responsible for preparing the read param for doing an {@link ImageReader#read(int, ImageReadParam)}. It sets the passed
-     * {@link ImageReadParam} in terms of decimation on reading using the provided requestedEnvelope and requestedDim to evaluate the needed
-     * resolution. It also returns and {@link Integer} representing the index of the raster to be read when dealing with multipage raster.
-     * 
-     * @param overviewPolicy it can be one of {@link Hints#VALUE_OVERVIEW_POLICY_IGNORE}, {@link Hints#VALUE_OVERVIEW_POLICY_NEAREST},
-     *        {@link Hints#VALUE_OVERVIEW_POLICY_QUALITY} or {@link Hints#VALUE_OVERVIEW_POLICY_SPEED}. It specifies the policy to compute the
-     *        overviews level upon request.
+     * This method is responsible for preparing the read param for doing an {@link
+     * ImageReader#read(int, ImageReadParam)}.
+     *
+     * <p>This method is responsible for preparing the read param for doing an {@link
+     * ImageReader#read(int, ImageReadParam)}. It sets the passed {@link ImageReadParam} in terms of
+     * decimation on reading using the provided requestedEnvelope and requestedDim to evaluate the
+     * needed resolution. It also returns and {@link Integer} representing the index of the raster
+     * to be read when dealing with multipage raster.
+     *
+     * @param overviewPolicy it can be one of {@link Hints#VALUE_OVERVIEW_POLICY_IGNORE}, {@link
+     *     Hints#VALUE_OVERVIEW_POLICY_NEAREST}, {@link Hints#VALUE_OVERVIEW_POLICY_QUALITY} or
+     *     {@link Hints#VALUE_OVERVIEW_POLICY_SPEED}. It specifies the policy to compute the
+     *     overviews level upon request.
      * @param readP an instance of {@link ImageReadParam} for setting the subsampling factors.
      * @param requestedEnvelope the {@link GeneralEnvelope} we are requesting.
      * @param requestedDim the requested dimensions.
      * @return the index of the raster to read in the underlying data source.
-     * @throws IOException
-     * @throws TransformException
      */
-    protected Integer setReadParams(String coverageName, OverviewPolicy overviewPolicy,
-            ImageReadParam readP, GeneralEnvelope requestedEnvelope, Rectangle requestedDim)
+    protected Integer setReadParams(
+            String coverageName,
+            OverviewPolicy overviewPolicy,
+            ImageReadParam readP,
+            GeneralEnvelope requestedEnvelope,
+            Rectangle requestedDim)
             throws IOException, TransformException {
 
         // //
@@ -326,7 +346,7 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         // Default image index 0
         //
         // //
-        Integer imageChoice = new Integer(0);
+        Integer imageChoice = Integer.valueOf(0);
 
         // //
         //
@@ -335,23 +355,30 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         // //
         // when policy is explictly provided it overrides the policy provided
         // using hints.
-        if (overviewPolicy == null)
-            overviewPolicy = extractOverviewPolicy();
+        if (overviewPolicy == null) overviewPolicy = extractOverviewPolicy();
 
         // //
         //
-        // default values for subsampling
+        // Resolution requested. I am here computing the resolution required by
+        // the user.
         //
-        // //
-        readP.setSourceSubsampling(1, 1, 0, 0);
+        double[] requestedRes =
+                getResolution(
+                        requestedEnvelope,
+                        requestedDim,
+                        getCoordinateReferenceSystem(coverageName));
+
+        // Decimation on reading (done here because it alters the read params allowing subsampling)
+        decimationOnReadingControl(coverageName, imageChoice, readP, requestedRes);
+
+        if (requestedRes == null) return imageChoice;
 
         // //
         //
         // requested to ignore overviews
         //
         // //
-        if (overviewPolicy.equals(OverviewPolicy.IGNORE))
-            return imageChoice;
+        if (overviewPolicy.equals(OverviewPolicy.IGNORE)) return imageChoice;
 
         // //
         //
@@ -364,37 +391,31 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
         // //
         //
-        // Resolution requested. I am here computing the resolution required by
-        // the user.
-        //
-        // //
-        double[] requestedRes = getResolution(requestedEnvelope, requestedDim,
-                getCoordinateReferenceSystem(coverageName));
-        if (requestedRes == null)
-            return imageChoice;
-
-        // //
-        //
         // overviews or decimation
         //
         // //
-        if (useOverviews)
-            imageChoice = pickOverviewLevel(coverageName, overviewPolicy, requestedRes);
+        if (useOverviews) {
+            int newImageChoice = pickOverviewLevel(coverageName, overviewPolicy, requestedRes);
 
-        // /////////////////////////////////////////////////////////////////////
-        // DECIMATION ON READING
-        // /////////////////////////////////////////////////////////////////////
-        decimationOnReadingControl(coverageName, imageChoice, readP, requestedRes);
+            // if image choice has changed due to using overviews, recalculate subsamping factors
+            if (imageChoice != newImageChoice) {
+                imageChoice = newImageChoice; // update
+                // recalculate subsampling factors if overview number has changed
+                decimationOnReadingControl(coverageName, imageChoice, readP, requestedRes);
+            }
+        }
+
         return imageChoice;
-
     }
 
     /**
-     * This method is responsible for checking the overview policy as defined by the provided {@link Hints}.
-     * 
-     * @return the overview policy which can be one of {@link Hints#VALUE_OVERVIEW_POLICY_IGNORE}, {@link Hints#VALUE_OVERVIEW_POLICY_NEAREST},
-     *         {@link Hints#VALUE_OVERVIEW_POLICY_SPEED}, {@link Hints#VALUE_OVERVIEW_POLICY_QUALITY}. Default is
-     *         {@link Hints#VALUE_OVERVIEW_POLICY_NEAREST}.
+     * This method is responsible for checking the overview policy as defined by the provided {@link
+     * Hints}.
+     *
+     * @return the overview policy which can be one of {@link Hints#VALUE_OVERVIEW_POLICY_IGNORE},
+     *     {@link Hints#VALUE_OVERVIEW_POLICY_NEAREST}, {@link Hints#VALUE_OVERVIEW_POLICY_SPEED},
+     *     {@link Hints#VALUE_OVERVIEW_POLICY_QUALITY}. Default is {@link
+     *     Hints#VALUE_OVERVIEW_POLICY_NEAREST}.
      */
     private OverviewPolicy extractOverviewPolicy() {
         OverviewPolicy overviewPolicy = null;
@@ -405,23 +426,22 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
                 overviewPolicy = (OverviewPolicy) this.hints.get(Hints.OVERVIEW_POLICY);
 
         // use default if not provided. Default is nearest
-        if (overviewPolicy == null)
-            overviewPolicy = OverviewPolicy.getDefaultPolicy();
+        if (overviewPolicy == null) overviewPolicy = OverviewPolicy.getDefaultPolicy();
         assert overviewPolicy != null;
         return overviewPolicy;
     }
 
-    private Integer pickOverviewLevel(String coverageName, OverviewPolicy policy, double[] requestedRes) {
+    private Integer pickOverviewLevel(
+            String coverageName, OverviewPolicy policy, double[] requestedRes) {
         // setup policy
-        if (policy == null)
-            policy = extractOverviewPolicy();
-        
+        if (policy == null) policy = extractOverviewPolicy();
+
         ArrayList<Resolution> resolutionsLevels;
 
         // sort resolutions from smallest pixels (higher res) to biggest pixels (higher res)
         // keeping a reference to the original image choice
         synchronized (this) {
-        	resolutionsLevels = resolutionsLevelsMap.get(coverageName);
+            resolutionsLevels = resolutionsLevelsMap.get(coverageName);
             if (resolutionsLevels == null) {
                 resolutionsLevels = new ArrayList<Resolution>();
                 resolutionsLevelsMap.put(coverageName, resolutionsLevels);
@@ -433,9 +453,12 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
                 resolutionsLevels.add(new Resolution(1, getHighestRes()[0], getHighestRes()[1], 0));
                 if (numOverviews > 0) {
                     for (int i = 0; i < overViewResolutions.length; i++)
-                        resolutionsLevels.add(new Resolution(overViewResolutions[i][0]
-                                / getHighestRes()[0], overViewResolutions[i][0],
-                                overViewResolutions[i][1], i + 1));
+                        resolutionsLevels.add(
+                                new Resolution(
+                                        overViewResolutions[i][0] / getHighestRes()[0],
+                                        overViewResolutions[i][0],
+                                        overViewResolutions[i][1],
+                                        i + 1));
                     Collections.sort(resolutionsLevels);
                 }
             }
@@ -451,20 +474,18 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         final double reqy = requestedRes[1];
 
         // requested scale factor for least reduced axis
-        final Resolution max = (Resolution) resolutionsLevels.get(0);
+        final Resolution max = resolutionsLevels.get(0);
         final double requestedScaleFactorX = reqx / max.resolutionX;
         final double requestedScaleFactorY = reqy / max.resolutionY;
         final int leastReduceAxis = requestedScaleFactorX <= requestedScaleFactorY ? 0 : 1;
-        final double requestedScaleFactor = leastReduceAxis == 0 ? requestedScaleFactorX
-                : requestedScaleFactorY;
+        final double requestedScaleFactor =
+                leastReduceAxis == 0 ? requestedScaleFactorX : requestedScaleFactorY;
 
         // are we looking for a resolution even higher than the native one?
-        if (requestedScaleFactor <= 1)
-            return max.imageChoice;
+        if (requestedScaleFactor <= 1) return max.imageChoice;
         // are we looking for a resolution even lower than the smallest overview?
-        final Resolution min = (Resolution) resolutionsLevels.get(resolutionsLevels.size() - 1);
-        if (requestedScaleFactor >= min.scaleFactor)
-            return min.imageChoice;
+        final Resolution min = resolutionsLevels.get(resolutionsLevels.size() - 1);
+        if (requestedScaleFactor >= min.scaleFactor) return min.imageChoice;
         // Ok, so we know the overview is between min and max, skip the first
         // and search for an overview with a resolution lower than the one requested,
         // that one and the one from the previous step will bound the searched resolution
@@ -483,15 +504,11 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
             // different than the one of the overviews), and we would end up going out of the loop
             // since not even the lowest can "top" the request for one axis
             if (curr.scaleFactor > requestedScaleFactor || i == size - 1) {
-                if (policy == OverviewPolicy.QUALITY)
-                    return prev.imageChoice;
-                else if (policy == OverviewPolicy.SPEED)
-                    return curr.imageChoice;
-                else if (requestedScaleFactor - prev.scaleFactor < curr.scaleFactor
-                        - requestedScaleFactor)
-                    return prev.imageChoice;
-                else
-                    return curr.imageChoice;
+                if (policy == OverviewPolicy.QUALITY) return prev.imageChoice;
+                else if (policy == OverviewPolicy.SPEED) return curr.imageChoice;
+                else if (requestedScaleFactor - prev.scaleFactor
+                        < curr.scaleFactor - requestedScaleFactor) return prev.imageChoice;
+                else return curr.imageChoice;
             }
             prev = curr;
         }
@@ -500,37 +517,32 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     }
 
     /**
-     * Returns the actual resolution used to read the data given the specified target resolution and the specified overview policy
-     * 
-     * @param policy
-     * @param resolutions
-     * @return
-     * @throws IOException 
+     * Returns the actual resolution used to read the data given the specified target resolution and
+     * the specified overview policy
      */
-    public double[] getReadingResolutions(OverviewPolicy policy, double[] requestedResolution) throws IOException {
+    public double[] getReadingResolutions(OverviewPolicy policy, double[] requestedResolution)
+            throws IOException {
         // Default implementation for backwards compatibility
-        return getReadingResolutions(coverageName, policy, requestedResolution);        
-    }    
+        return getReadingResolutions(coverageName, policy, requestedResolution);
+    }
 
     /**
-     * Returns the actual resolution used to read the data given the specified target resolution and the specified overview policy
-     * 
-     * @param policy
-     * @param resolutions
-     * @return
+     * Returns the actual resolution used to read the data given the specified target resolution and
+     * the specified overview policy
      */
     @Override
-    public double[] getReadingResolutions(String coverageName, OverviewPolicy policy,
-            double[] requestedResolution) throws IOException {
+    public double[] getReadingResolutions(
+            String coverageName, OverviewPolicy policy, double[] requestedResolution)
+            throws IOException {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
         // find the target resolution level
         double[] result;
         if (numOverviews > 0) {
             int imageIdx = pickOverviewLevel(coverageName, policy, requestedResolution);
-            result = overViewResolutions[imageIdx];
+            result = imageIdx > 0 ? overViewResolutions[imageIdx - 1] : highestRes;
         } else {
             result = getHighestRes();
         }
@@ -543,7 +555,7 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Simple support class for sorting overview resolutions
-     * 
+     *
      * @author Andrea Aime
      * @author Simone Giannecchini, GeoSolutions.
      * @since 2.5
@@ -557,8 +569,11 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
         int imageChoice;
 
-        public Resolution(final double scaleFactor, final double resolutionX,
-                final double resolutionY, int imageChoice) {
+        public Resolution(
+                final double scaleFactor,
+                final double resolutionX,
+                final double resolutionY,
+                int imageChoice) {
             this.scaleFactor = scaleFactor;
             this.resolutionX = resolutionX;
             this.resolutionY = resolutionY;
@@ -566,38 +581,29 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         }
 
         public int compareTo(Resolution other) {
-            if (scaleFactor > other.scaleFactor)
-                return 1;
-            else if (scaleFactor < other.scaleFactor)
-                return -1;
-            else
-                return 0;
+            if (scaleFactor > other.scaleFactor) return 1;
+            else if (scaleFactor < other.scaleFactor) return -1;
+            else return 0;
         }
 
         public String toString() {
             return "Resolution[Choice=" + imageChoice + ",scaleFactor=" + scaleFactor + "]";
         }
     }
-    
-    protected final void decimationOnReadingControl(Integer imageChoice, ImageReadParam readP, double[] requestedRes) {
-        decimationOnReadingControl(imageChoice, readP, requestedRes);
-    }
 
     /**
-     * This method is responsible for evaluating possible subsampling factors once the best resolution level has been found, in case we have support
-     * for overviews, or starting from the original coverage in case there are no overviews available.
-     * 
-     * Anyhow this method should not be called directly but subclasses should make use of the setReadParams method instead in order to transparently
-     * look for overviews.
-     * 
-     * @param imageChoice
-     * @param readP
-     * @param requestedRes
+     * This method is responsible for evaluating possible subsampling factors once the best
+     * resolution level has been found, in case we have support for overviews, or starting from the
+     * original coverage in case there are no overviews available.
+     *
+     * <p>Anyhow this method should not be called directly but subclasses should make use of the
+     * setReadParams method instead in order to transparently look for overviews.
      */
-    protected final void decimationOnReadingControl(String coverageName, Integer imageChoice, ImageReadParam readP, double[] requestedRes) {
+    protected final void decimationOnReadingControl(
+            String coverageName, Integer imageChoice, ImageReadParam readP, double[] requestedRes) {
         {
             int w, h;
-            double selectedRes[] = new double[2];
+            double[] selectedRes = new double[2];
             final int choice = imageChoice.intValue();
             if (choice == 0) {
                 // highest resolution
@@ -611,7 +617,6 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
                 selectedRes[1] = overViewResolutions[choice - 1][1];
                 w = (int) Math.round(getOriginalEnvelope(coverageName).getSpan(0) / selectedRes[0]);
                 h = (int) Math.round(getOriginalEnvelope(coverageName).getSpan(1) / selectedRes[1]);
-
             }
             // /////////////////////////////////////////////////////////////////////
             // DECIMATION ON READING
@@ -627,41 +632,47 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
                 int subSamplingFactorX = (int) Math.floor(requestedRes[0] / selectedRes[0]);
                 subSamplingFactorX = subSamplingFactorX == 0 ? 1 : subSamplingFactorX;
 
-                while (w / subSamplingFactorX <= 0 && subSamplingFactorX >= 0)
-                    subSamplingFactorX--;
+                while (w / subSamplingFactorX <= 0 && subSamplingFactorX >= 0) subSamplingFactorX--;
                 subSamplingFactorX = subSamplingFactorX == 0 ? 1 : subSamplingFactorX;
 
                 int subSamplingFactorY = (int) Math.floor(requestedRes[1] / selectedRes[1]);
                 subSamplingFactorY = subSamplingFactorY == 0 ? 1 : subSamplingFactorY;
 
-                while (h / subSamplingFactorY <= 0 && subSamplingFactorY >= 0)
-                    subSamplingFactorY--;
+                while (h / subSamplingFactorY <= 0 && subSamplingFactorY >= 0) subSamplingFactorY--;
                 subSamplingFactorY = subSamplingFactorY == 0 ? 1 : subSamplingFactorY;
 
                 readP.setSourceSubsampling(subSamplingFactorX, subSamplingFactorY, 0, 0);
-            }
 
+                if (LOGGER.isLoggable(Level.FINE))
+                    LOGGER.log(
+                            Level.FINE,
+                            String.format(
+                                    "coverageName:%s,imageChoice:%d,subSamplingFactorX:%d,subSamplingFactorY:%d",
+                                    coverageName,
+                                    imageChoice.intValue(),
+                                    subSamplingFactorX,
+                                    subSamplingFactorY));
+            }
         }
     }
 
     /**
-     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link #originalEnvelope} that was provided for this coverage.
-     * 
+     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link
+     * #originalEnvelope} that was provided for this coverage.
+     *
      * @param image contains the data for the coverage to create.
      * @return a {@link GridCoverage}
-     * @throws IOException
      */
     protected final GridCoverage createImageCoverage(PlanarImage image) throws IOException {
         return createImageCoverage(coverageName, image);
     }
 
     /**
-     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link #originalEnvelope} that was provided for this coverage.
-     * 
-     * @param coverageName
+     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link
+     * #originalEnvelope} that was provided for this coverage.
+     *
      * @param image contains the data for the coverage to create.
      * @return a {@link GridCoverage}
-     * @throws IOException
      */
     protected final GridCoverage createImageCoverage(String coverageName, PlanarImage image)
             throws IOException {
@@ -669,35 +680,36 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     }
 
     /**
-     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link #raster2Model} that was provided for this coverage.
-     * 
-     * <p>
-     * This method is vital when working with coverages that have a raster to model transformation that is not a simple scale and translate.
-     * 
+     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link
+     * #raster2Model} that was provided for this coverage.
+     *
+     * <p>This method is vital when working with coverages that have a raster to model
+     * transformation that is not a simple scale and translate.
+     *
      * @param image contains the data for the coverage to create.
-     * @param raster2Model is the {@link MathTransform} that maps from the raster space to the model space.
+     * @param raster2Model is the {@link MathTransform} that maps from the raster space to the model
+     *     space.
      * @return a {@link GridCoverage}
-     * @throws IOException
      */
-    protected final GridCoverage2D createImageCoverage(PlanarImage image, MathTransform raster2Model)
-            throws IOException {
+    protected final GridCoverage2D createImageCoverage(
+            PlanarImage image, MathTransform raster2Model) throws IOException {
         return createImageCoverage(coverageName, image, raster2Model);
     }
 
     /**
-     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link #raster2Model} that was provided for this coverage.
-     * 
-     * <p>
-     * This method is vital when working with coverages that have a raster to model transformation that is not a simple scale and translate.
-     * 
-     * @param coverageName
+     * Creates a {@link GridCoverage} for the provided {@link PlanarImage} using the {@link
+     * #raster2Model} that was provided for this coverage.
+     *
+     * <p>This method is vital when working with coverages that have a raster to model
+     * transformation that is not a simple scale and translate.
+     *
      * @param image contains the data for the coverage to create.
-     * @param raster2Model is the {@link MathTransform} that maps from the raster space to the model space.
+     * @param raster2Model is the {@link MathTransform} that maps from the raster space to the model
+     *     space.
      * @return a {@link GridCoverage}
-     * @throws IOException
      */
-    protected final GridCoverage2D createImageCoverage(String coverageName, PlanarImage image,
-            MathTransform raster2Model) throws IOException {
+    protected final GridCoverage2D createImageCoverage(
+            String coverageName, PlanarImage image, MathTransform raster2Model) throws IOException {
 
         // creating bands
         final SampleModel sm = image.getSampleModel();
@@ -709,46 +721,56 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
             final ColorInterpretation colorInterpretation = TypeMap.getColorInterpretation(cm, i);
             if (colorInterpretation == null)
                 throw new IOException("Unrecognized sample dimension type");
-            bands[i] = new GridSampleDimension(colorInterpretation.name()).geophysics(true);
+            bands[i] = new GridSampleDimension(colorInterpretation.name());
         }
         // creating coverage
         if (raster2Model != null) {
-            return coverageFactory.create(coverageName, image,
-                    getCoordinateReferenceSystem(coverageName), raster2Model, bands, null, null);
+            return coverageFactory.create(
+                    coverageName,
+                    image,
+                    getCoordinateReferenceSystem(coverageName),
+                    raster2Model,
+                    bands,
+                    null,
+                    null);
         }
-        return coverageFactory.create(coverageName, image, new GeneralEnvelope(getOriginalEnvelope(coverageName)),
-                bands, null, null);
-
+        return coverageFactory.create(
+                coverageName,
+                image,
+                new GeneralEnvelope(getOriginalEnvelope(coverageName)),
+                bands,
+                null,
+                null);
     }
 
     /**
-     * This method is responsible for computing the resolutions in for the provided grid geometry in the provided crs.
-     * 
-     * <P>
-     * It is worth to note that the returned resolution array is of length of 2 and it always is lon, lat for the moment.<br>
-     * It might be worth to remove the axes reordering code when we are confident enough with the code to handle the north-up crs.
-     * <p>
-     * TODO use orthodromic distance?
-     * 
+     * This method is responsible for computing the resolutions in for the provided grid geometry in
+     * the provided crs.
+     *
+     * <p>It is worth to note that the returned resolution array is of length of 2 and it always is
+     * lon, lat for the moment.<br>
+     * It might be worth to remove the axes reordering code when we are confident enough with the
+     * code to handle the north-up crs.
+     *
+     * <p>TODO use orthodromic distance?
+     *
      * @param envelope the GeneralEnvelope
-     * @param dim
-     * @param crs
-     * @throws DataSourceException
      */
-    protected final static double[] getResolution(GeneralEnvelope envelope, Rectangle2D dim,
-            CoordinateReferenceSystem crs) throws DataSourceException {
+    protected static final double[] getResolution(
+            GeneralEnvelope envelope, Rectangle2D dim, CoordinateReferenceSystem crs)
+            throws DataSourceException {
         double[] requestedRes = null;
         try {
             if (dim != null && envelope != null && crs != null) {
                 // do we need to transform the originalEnvelope?
-                final CoordinateReferenceSystem crs2D = CRS.getHorizontalCRS(envelope
-                        .getCoordinateReferenceSystem());
-                if (crs2D != null && !CRS.equalsIgnoreMetadata(crs, crs2D)) {
-                    final MathTransform tr = CRS.findMathTransform(crs2D, crs, true);
-                    if (!tr.isIdentity()) {
-                        envelope = CRS.transform(tr, envelope);
-                        envelope.setCoordinateReferenceSystem(crs);
-                    }
+                final CoordinateReferenceSystem envelopeCrs2D =
+                        CRS.getHorizontalCRS(envelope.getCoordinateReferenceSystem());
+                if (envelopeCrs2D != null && !CRS.equalsIgnoreMetadata(crs, envelopeCrs2D)) {
+                    CoordinateOperationFactory operationFactory =
+                            CRS.getCoordinateOperationFactory(true);
+                    CoordinateOperation op = operationFactory.createOperation(envelopeCrs2D, crs);
+                    envelope = CRS.transform(op, envelope);
+                    envelope.setCoordinateReferenceSystem(crs);
                 }
                 requestedRes = new double[2];
                 requestedRes[0] = envelope.getSpan(0) / dim.getWidth();
@@ -763,44 +785,40 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     }
 
     /**
-     * Retrieves the {@link CoordinateReferenceSystem} for dataset pointed by this {@link AbstractGridCoverage2DReader}.
-     * 
-     * @return the {@link CoordinateReferenceSystem} for dataset pointed by this {@link AbstractGridCoverage2DReader}.
-     * @deprecated use {@link #getCoordinateReferenceSystem()}
-     */
-    public final CoordinateReferenceSystem getCrs() {
-        return getCoordinateReferenceSystem();
-    }
-
-    /**
-     * Retrieves the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the highest resolution level in this dataset.
-     * 
-     * @return the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the highest resolution level in this dataset.
+     * Retrieves the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the
+     * highest resolution level in this dataset.
+     *
+     * @return the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the
+     *     highest resolution level in this dataset.
      */
     public GridEnvelope getOriginalGridRange() {
         return getOriginalGridRange(coverageName);
     }
-    
+
     /**
-     * Retrieves the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the highest resolution level in this dataset.
-     * 
-     * @return the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the highest resolution level in this dataset.
+     * Retrieves the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the
+     * highest resolution level in this dataset.
+     *
+     * @return the {@link GeneralGridEnvelope} that represents the raster grid dimensions of the
+     *     highest resolution level in this dataset.
      */
     @Override
     public GridEnvelope getOriginalGridRange(String coverageName) {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
         assert originalGridRange.getDimension() == 2;
-        return new GridEnvelope2D(originalGridRange.getLow(0), originalGridRange.getLow(1),
-                originalGridRange.getSpan(0), originalGridRange.getSpan(1));
-
+        return new GridEnvelope2D(
+                originalGridRange.getLow(0),
+                originalGridRange.getLow(1),
+                originalGridRange.getSpan(0),
+                originalGridRange.getSpan(1));
     }
-    
+
     /**
      * Retrieves the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
-     * 
+     *
      * @return the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
      */
     @Override
@@ -808,17 +826,17 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         // Default implementation for backwards compatibility
         return getCoordinateReferenceSystem(coverageName);
     }
-    
+
     /**
      * Retrieves the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
-     * 
+     *
      * @return the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
      */
     @Override
     public CoordinateReferenceSystem getCoordinateReferenceSystem(String coverageName) {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
 
         return crs;
@@ -826,7 +844,7 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Retrieves the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
-     * 
+     *
      * @return the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
      */
     public GeneralEnvelope getOriginalEnvelope() {
@@ -835,53 +853,58 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Retrieves the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
-     * 
+     *
      * @return the {@link GeneralEnvelope} for this {@link AbstractGridCoverage2DReader}.
      */
     @Override
     public GeneralEnvelope getOriginalEnvelope(String coverageName) {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
         return new GeneralEnvelope(originalEnvelope);
     }
 
     /**
-     * Retrieves the original grid to world transformation for this {@link AbstractGridCoverage2DReader}.
-     * 
+     * Retrieves the original grid to world transformation for this {@link
+     * AbstractGridCoverage2DReader}.
+     *
      * @param pixInCell specifies the datum of the transformation we want.
-     * @return the original grid to world transformation for this {@link AbstractGridCoverage2DReader}.
+     * @return the original grid to world transformation for this {@link
+     *     AbstractGridCoverage2DReader}.
      */
     public MathTransform getOriginalGridToWorld(final PixelInCell pixInCell) {
         // Default implementation for backwards compatibility
         return getOriginalGridToWorld(coverageName, pixInCell);
     }
-    
+
     /**
-     * Retrieves the original grid to world transformation for this {@link AbstractGridCoverage2DReader}.
-     * 
+     * Retrieves the original grid to world transformation for this {@link
+     * AbstractGridCoverage2DReader}.
+     *
      * @param pixInCell specifies the datum of the transformation we want.
-     * @return the original grid to world transformation for this {@link AbstractGridCoverage2DReader}.
+     * @return the original grid to world transformation for this {@link
+     *     AbstractGridCoverage2DReader}.
      */
     @Override
     public MathTransform getOriginalGridToWorld(String coverageName, PixelInCell pixInCell) {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
         synchronized (this) {
             if (raster2Model == null) {
-                final GridToEnvelopeMapper geMapper = new GridToEnvelopeMapper(
-                        getOriginalGridRange(coverageName), getOriginalEnvelope(coverageName));
+                final GridToEnvelopeMapper geMapper =
+                        new GridToEnvelopeMapper(
+                                getOriginalGridRange(coverageName),
+                                getOriginalEnvelope(coverageName));
                 geMapper.setPixelAnchor(PixelInCell.CELL_CENTER);
                 raster2Model = geMapper.createTransform();
             }
         }
 
         // we do not have to change the pixel datum
-        if (pixInCell == PixelInCell.CELL_CENTER)
-            return raster2Model;
+        if (pixInCell == PixelInCell.CELL_CENTER) return raster2Model;
 
         // we do have to change the pixel datum
         if (raster2Model instanceof AffineTransform) {
@@ -899,7 +922,7 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Retrieves the source for this {@link AbstractGridCoverage2DReader}.
-     * 
+     *
      * @return the source for this {@link AbstractGridCoverage2DReader}.
      */
     public final Object getSource() {
@@ -908,9 +931,8 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Disposes this reader.
-     * 
-     * <p>
-     * This method just tries to close the underlying {@link ImageInputStream}.
+     *
+     * <p>This method just tries to close the underlying {@link ImageInputStream}.
      */
     public void dispose() {
         if (inStream != null && closeMe) {
@@ -921,91 +943,64 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
                     LOGGER.log(Level.FINE, e.getLocalizedMessage(), e);
             }
         }
-
-    }
-
-    /**
-     * @see org.opengis.coverage.grid.GridCoverageReader#skip()
-     * @deprecated no replacement for that method
-     */
-    public void skip() {
-        throw new UnsupportedOperationException("Unsupported operation.");
-    }
-
-    /**
-     * @see org.opengis.coverage.grid.GridCoverageReader#hasMoreGridCoverages()
-     * @deprecated no replacement for that method
-     */
-    public boolean hasMoreGridCoverages() {
-        throw new UnsupportedOperationException("Unsupported operation.");
-    }
-
-    /**
-     * @deprecated use {@link #getGridCoverageNames()}
-     */
-    public String[] listSubNames() {
-        return getGridCoverageNames();
     }
 
     @Override
     public String[] getGridCoverageNames() {
-        return new String[] { coverageName };
-    }
-
-    /**
-     * @see org.opengis.coverage.grid.GridCoverageReader#getCurrentSubname()
-     * @deprecated no replacement for that method
-     */
-    public String getCurrentSubname() {
-        throw new UnsupportedOperationException("Unsupported operation.");
+        return new String[] {coverageName};
     }
 
     public String[] getMetadataNames(final String coverageName) {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
         return getMetadataNames();
     }
 
-    /**
-     * @see org.opengis.coverage.grid.GridCoverageReader#getMetadataNames()
-     */
+    /** @see org.opengis.coverage.grid.GridCoverageReader#getMetadataNames() */
     public String[] getMetadataNames() {
         return null;
     }
 
-    /**
-     * @see org.opengis.coverage.grid.GridCoverageReader#getMetadataValue(java.lang.String)
-     */
+    /** @see org.opengis.coverage.grid.GridCoverageReader#getMetadataValue(java.lang.String) */
     public String getMetadataValue(final String name) {
         return getMetadataValue(coverageName, name);
     }
 
     public String getMetadataValue(final String coverageName, final String name) {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
         return null;
     }
 
-    /**
-     * @see org.opengis.coverage.grid.GridCoverageReader#getGridCoverageCount()
-     */
+    /** @see org.opengis.coverage.grid.GridCoverageReader#getGridCoverageCount() */
     public int getGridCoverageCount() {
         return 1;
     }
 
     /**
      * Information about this source.
-     * <p>
-     * Subclasses should provide additional format specific information.
-     * 
+     *
+     * <p>Subclasses should provide additional format specific information.
+     *
      * @return ServiceInfo describing getSource().
      */
     public ServiceInfo getInfo() {
-        DefaultServiceInfo info = new DefaultServiceInfo();
+        DefaultServiceInfo info;
+        try {
+            List<FileGroup> files = getFiles();
+            if (files != null && !files.isEmpty()) {
+                info = new DefaultFileServiceInfo(files);
+            } else {
+                info = new DefaultServiceInfo();
+            }
+        } catch (IOException e) {
+            LOGGER.log(Level.WARNING, "Failed to locate source file list", e);
+            info = new DefaultServiceInfo();
+        }
         info.setDescription(source == null ? null : String.valueOf(source));
         if (source instanceof URL) {
             URL url = (URL) source;
@@ -1025,65 +1020,106 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         return info;
     }
 
-    // /**
-    // * Information about the named gridcoveage.
-    // *
-    // * @param subname Name indicing grid coverage to describe
-    // * @return ResourceInfo describing grid coverage indicated
-    // */
-    // public ResourceInfo getInfo( String subname ){
-    // DefaultResourceInfo info = new DefaultResourceInfo();
-    // info.setName( subname );
-    // info.setBounds( new ReferencedEnvelope( this.getOriginalEnvelope()));
-    // info.setCRS( this.getCrs() );
-    // info.setTitle( subname );
-    // return info;
-    // }
+    /**
+     * Returns a list of files making up the source data for this reader (as a whole). The default
+     * implementation returns the source, if it can be made into a File object, or null otherwise.
+     */
+    protected List<FileGroup> getFiles() throws IOException {
+        File file = getSourceAsFile();
+
+        if (file == null) {
+            return null;
+        } else {
+            return Collections.singletonList(new FileGroup(file, null, null));
+        }
+    }
+
+    /** Returns the source as a File, if it can be converted to one, and it exists */
+    protected File getSourceAsFile() {
+        File file = null;
+        if (source instanceof File) {
+            file = (File) source;
+        } else if (source instanceof URL) {
+            File sf = URLs.urlToFile((URL) source);
+            if (sf.exists()) {
+                file = sf;
+            }
+        }
+        return file;
+    }
 
     /**
-     * Forcing disposal of this {@link AbstractGridCoverage2DReader} which may keep an {@link ImageInputStream} open.
+     * Default implementation returns a FileResourceInfo containing same fileGroup list contained in
+     * the ServiceInfo object.
      */
     @Override
+    public ResourceInfo getInfo(String coverageName) {
+
+        ResourceInfo info = null;
+        try {
+            List<FileGroup> files = getFiles();
+            if (files != null && !files.isEmpty()) {
+                info = new DefaultFileResourceInfo(files);
+            } else {
+                info = new DefaultResourceInfo();
+            }
+        } catch (IOException e) {
+            LOGGER.log(Level.WARNING, "Failed to locate source file list", e);
+            info = new DefaultResourceInfo();
+        }
+        return info;
+    }
+
+    /**
+     * Forcing disposal of this {@link AbstractGridCoverage2DReader} which may keep an {@link
+     * ImageInputStream} open.
+     */
+    @Override
+    @SuppressWarnings("deprecation") // finalize is deprecated in Java 9
     protected void finalize() throws Throwable {
         dispose();
         super.finalize();
     }
 
     /**
-     * Return the set of dynamic parameterDescriptors (the ones related to domains) for this reader. Default implementation returns an empty set of
-     * parameters
-     * 
-     * @return
+     * Return the set of dynamic parameterDescriptors (the ones related to domains) for this reader.
+     * Default implementation returns an empty set of parameters
      */
     @SuppressWarnings("rawtypes")
     public Set<ParameterDescriptor<List>> getDynamicParameters() throws IOException {
         return getDynamicParameters(coverageName);
     }
-    
+
     /**
-     * Return the set of dynamic parameterDescriptors (the ones related to domains) for this reader. Default implementation returns an empty set of
-     * parameters
-     * 
-     * @return
+     * Return the set of dynamic parameterDescriptors (the ones related to domains) for this reader.
+     * Default implementation returns an empty set of parameters
      */
     @SuppressWarnings("rawtypes")
-    public Set<ParameterDescriptor<List>> getDynamicParameters(String coverageName)  throws IOException {
+    public Set<ParameterDescriptor<List>> getDynamicParameters(String coverageName)
+            throws IOException {
         return Collections.emptySet();
     }
 
-    @Override
-    public int getNumOverviews(String coverageName) {
-        if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
-        }
-        return overViewResolutions != null ? overViewResolutions.length : 0;
+    public DatasetLayout getDatasetLayout() {
+        // Default implementation for backwards compatibility
+        return getDatasetLayout(coverageName);
     }
 
-    @Override
-    public int getNumOverviews() {
-        // Default implementation for backwards compatibility
-        return getNumOverviews(coverageName);
+    public DatasetLayout getDatasetLayout(String coverageName) {
+        if (!checkName(coverageName)) {
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + " is not supported");
+        }
+        // for compatibility with the readers not initializing the field
+        if (dtLayout == null) {
+            return new DefaultDatasetLayoutImpl() {
+                @Override
+                public int getNumInternalOverviews() {
+                    return numOverviews;
+                }
+            };
+        }
+        return dtLayout;
     }
 
     public GridEnvelope getOverviewGridEnvelope(int overviewIndex) throws IOException {
@@ -1093,8 +1129,8 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     public GridEnvelope getOverviewGridEnvelope(String coverageName, int overviewIndex)
             throws IOException {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
 
         // Default implementation for backwards compatibility
@@ -1104,8 +1140,8 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     @Override
     public ImageLayout getImageLayout(String coverageName) throws IOException {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
 
         return (ImageLayout) imageLayout.clone();
@@ -1119,7 +1155,7 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
 
     /**
      * Extract the ImageLayout from the provided reader for the first available image.
-     * 
+     *
      * @param reader an istance of {@link ImageReader}
      * @throws IOException in case an error occurs
      */
@@ -1131,20 +1167,21 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
         ImageTypeSpecifier its = reader.getImageTypes(0).next();
         layout.setColorModel(its.getColorModel()).setSampleModel(its.getSampleModel());
         layout.setMinX(0).setMinY(0).setWidth(reader.getWidth(0)).setHeight(reader.getHeight(0));
-        layout.setTileGridXOffset(0).setTileGridYOffset(0).setTileWidth(reader.getTileWidth(0))
+        layout.setTileGridXOffset(0)
+                .setTileGridYOffset(0)
+                .setTileWidth(reader.getTileWidth(0))
                 .setTileHeight(reader.getTileHeight(0));
         setlayout(layout);
     }
 
     /**
      * Set the provided layout for this {@link GridCoverage2DReader}-
-     * 
+     *
      * @param layout the {@link ImageLayout} to set. It must be nont null
      */
     protected void setlayout(ImageLayout layout) {
         Utilities.ensureNonNull("layout", layout);
         this.imageLayout = (ImageLayout) layout.clone();
-
     }
 
     @Override
@@ -1156,30 +1193,158 @@ public abstract class AbstractGridCoverage2DReader implements GridCoverage2DRead
     @Override
     public double[][] getResolutionLevels(String coverageName) throws IOException {
         if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
 
         final double[][] returnValue = new double[numOverviews + 1][2];
-        System.arraycopy(getHighestRes(), 0, returnValue[0], 0, 2);
-        for (int i = 1; i < returnValue.length; i++) {
-            System.arraycopy(overViewResolutions[i - 1], 0, returnValue[i], 0, 2);
+        double[] hres = getHighestRes();
+        if (hres == null) {
+            return null;
+        } else {
+            System.arraycopy(hres, 0, returnValue[0], 0, 2);
+            for (int i = 1; i < returnValue.length; i++) {
+                System.arraycopy(overViewResolutions[i - 1], 0, returnValue[i], 0, 2);
+            }
+            return returnValue;
         }
-        return returnValue;
     }
-    
 
     protected double[] getHighestRes(String coverageName) {
-    	if (!checkName(coverageName)) {
-            throw new IllegalArgumentException("The specified coverageName " + coverageName
-                    + "is not supported");
+        if (!checkName(coverageName)) {
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
         }
-    	
-		return highestRes;
-	}
-    
-    double[] getHighestRes() {
-		return getHighestRes(coverageName);
-	}
 
+        return highestRes;
+    }
+
+    double[] getHighestRes() {
+        return getHighestRes(coverageName);
+    }
+
+    /** Return the ground control points for the default coverage, or null if there are none */
+    public GroundControlPoints getGroundControlPoints() {
+        return null;
+    }
+
+    /** Return the ground control points for the specified, or null if there are none */
+    public GroundControlPoints getGroundControlPoints(String coverageName) {
+        if (!checkName(coverageName)) {
+            throw new IllegalArgumentException(
+                    "The specified coverageName " + coverageName + "is not supported");
+        }
+        return null;
+    }
+
+    /**
+     * Computes the raster to model of a rescaled output raster, based on the original transform and
+     * output raster scaling factor
+     */
+    protected AffineTransform getRescaledRasterToModel(RenderedImage coverageRaster) {
+        final int ssWidth = coverageRaster.getWidth();
+        final int ssHeight = coverageRaster.getHeight();
+        if (LOGGER.isLoggable(Level.FINE)) {
+            LOGGER.log(Level.FINE, "Coverage read: width = " + ssWidth + " height = " + ssHeight);
+        }
+
+        // //
+        //
+        // setting new coefficients to define a new affineTransformation
+        // to be applied to the grid to world transformation
+        // -----------------------------------------------------------------------------------
+        //
+        // With respect to the original envelope, the obtained planarImage
+        // needs to be rescaled. The scaling factors are computed as the
+        // ratio between the output raster sizes and the original sizes
+        // (this correctly accounts for odd sized overviews)
+        // //
+        final double scaleX = originalGridRange.getSpan(0) / (1.0 * ssWidth);
+        final double scaleY = originalGridRange.getSpan(1) / (1.0 * ssHeight);
+        final AffineTransform tempRaster2Model =
+                new AffineTransform((AffineTransform) raster2Model);
+        AffineTransform scale = new AffineTransform(scaleX, 0, 0, scaleY, 0, 0);
+        if (!XAffineTransform.isIdentity(scale, EPS)) {
+            // the transformation includes the pixel is center shift, we need to
+            // remove it before rescaling, and then apply it back later
+            tempRaster2Model.concatenate(CoverageUtilities.CENTER_TO_CORNER);
+            tempRaster2Model.concatenate(scale);
+            tempRaster2Model.concatenate(CoverageUtilities.CORNER_TO_CENTER);
+        }
+
+        return tempRaster2Model;
+    }
+
+    /** Retrieves the sibling of the specified file, if available, or null otherwise */
+    protected static File getSibling(final File file, String extension) {
+        String parentPath = file.getParent();
+        String filename = file.getName();
+        final int i = filename.lastIndexOf('.');
+        filename = (i == -1) ? filename : filename.substring(0, i);
+
+        // getting name and extension
+        final String base =
+                (parentPath != null)
+                        ? new StringBuilder(parentPath)
+                                .append(File.separator)
+                                .append(filename)
+                                .toString()
+                        : filename;
+
+        // We can now construct the baseURL from this string.
+        File file2Parse = new File(new StringBuilder(base).append(extension).toString());
+        if (file2Parse.exists()) {
+            return file2Parse;
+        } else {
+            return null;
+        }
+    }
+
+    /** Adds all the siblings that could be found to exist to the given file list */
+    protected void addAllSiblings(final File file, List<File> files, String... extensions) {
+        String parentPath = file.getParent();
+        String filename = file.getName();
+        final int i = filename.lastIndexOf('.');
+        filename = (i == -1) ? filename : filename.substring(0, i);
+
+        // getting name and extension
+        final String base =
+                (parentPath != null)
+                        ? new StringBuilder(parentPath)
+                                .append(File.separator)
+                                .append(filename)
+                                .toString()
+                        : filename;
+
+        // We can now construct the baseURL from this string.
+        for (String extension : extensions) {
+            File file2Parse = new File(new StringBuilder(base).append(extension).toString());
+            if (file2Parse.exists()) {
+                files.add(file2Parse);
+            }
+        }
+    }
+
+    /** Adds the specified siblings, if not null, and existing */
+    protected void addSiblings(List<File> files, File... siblings) {
+        for (File sibling : siblings) {
+            if (sibling != null && sibling.exists()) {
+                files.add(sibling);
+            }
+        }
+    }
+
+    protected MultiLevelROIProvider getMultiLevelROIProvider(String coverageName) {
+        throw new UnsupportedOperationException(
+                "The abstract reader doesn't implement this method yet");
+    }
+
+    /** Collects the scales and offsets for value rescaling from the metadata, if present */
+    protected void collectScaleOffset(IIOMetadata iioMetadata) {
+        if (iioMetadata instanceof CoreCommonImageMetadata) {
+            CoreCommonImageMetadata ccm = (CoreCommonImageMetadata) iioMetadata;
+            this.scales = ccm.getScales();
+            this.offsets = ccm.getOffsets();
+        }
+    }
 }
