@@ -1,7 +1,7 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2006-2008, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
@@ -19,35 +19,30 @@ package org.geotools.filter.text.commons;
 import java.util.Date;
 import java.util.EmptyStackException;
 import java.util.Stack;
-
 import org.geotools.filter.text.cql2.CQLException;
 import org.geotools.temporal.object.DefaultInstant;
 import org.geotools.temporal.object.DefaultPeriod;
 import org.geotools.temporal.object.DefaultPosition;
+import org.geotools.util.SuppressFBWarnings;
+import org.locationtech.jts.geom.Geometry;
 import org.opengis.filter.Filter;
 import org.opengis.filter.expression.Literal;
 import org.opengis.filter.expression.PropertyName;
 import org.opengis.temporal.Period;
 import org.opengis.temporal.Position;
 
-import com.vividsolutions.jts.geom.Geometry;
-
-
 /**
  * Holds the results of the building process in a stack
- * <p>
- * Warning: This component is not published. It is part of module implementation. 
- * Client module should not use this feature.
- * </p>
+ *
+ * <p>Warning: This component is not published. It is part of module implementation. Client module
+ * should not use this feature.
+ *
  * @author Mauricio Pazos - Axios Engineering
  * @author Gabriel Roldan - Axios Engineering
- *
- *
- *
- * @source $URL$
  * @version $Id$
  * @since 2.4
  */
+@SuppressFBWarnings("NP_NULL_ON_SOME_PATH_EXCEPTION")
 public final class BuildResultStack {
 
     private final Stack<Result> stack = new Stack<Result>();
@@ -56,10 +51,9 @@ public final class BuildResultStack {
 
     public BuildResultStack(final String cqlSource) {
         assert cqlSource != null;
-        
-        this.cqlSource  = cqlSource;
-    }
 
+        this.cqlSource = cqlSource;
+    }
 
     public Result peek() {
         return stack.peek();
@@ -73,8 +67,7 @@ public final class BuildResultStack {
         return stack.pop();
     }
 
-    public org.opengis.filter.expression.Expression popExpression()
-        throws CQLException {
+    public org.opengis.filter.expression.Expression popExpression() throws CQLException {
         Result item = null;
 
         try {
@@ -82,22 +75,21 @@ public final class BuildResultStack {
 
             return (org.opengis.filter.expression.Expression) item.getBuilt();
         } catch (ClassCastException cce) {
-            throw new CQLException("Expecting Expression",
-                item.getToken(), cce, this.cqlSource);
+            throw new CQLException("Expecting Expression", item.getToken(), cce, this.cqlSource);
         } catch (EmptyStackException ese) {
             throw new CQLException("No items on stack");
         }
     }
+
     public Literal popLiteral() throws CQLException {
         Result item = null;
 
         try {
-            item =  stack.pop();
+            item = stack.pop();
 
             return (Literal) item.getBuilt();
         } catch (ClassCastException cce) {
-            throw new CQLException("Expecting Literal",
-                item.getToken(), cce, this.cqlSource);
+            throw new CQLException("Expecting Literal", item.getToken(), cce, this.cqlSource);
         } catch (EmptyStackException ese) {
             throw new CQLException("No items on stack");
         }
@@ -111,8 +103,7 @@ public final class BuildResultStack {
 
             return (PropertyName) item.getBuilt();
         } catch (ClassCastException cce) {
-            throw new CQLException("Expecting Property",
-                item.getToken(), cce, this.cqlSource);
+            throw new CQLException("Expecting Property", item.getToken(), cce, this.cqlSource);
         } catch (EmptyStackException ese) {
             throw new CQLException("No items on stack");
         }
@@ -126,8 +117,7 @@ public final class BuildResultStack {
 
             return (Filter) item.getBuilt();
         } catch (ClassCastException cce) {
-            throw new CQLException("Expecting Filter",
-                item.getToken(), cce, this.cqlSource);
+            throw new CQLException("Expecting Filter", item.getToken(), cce, this.cqlSource);
         } catch (EmptyStackException ese) {
             throw new CQLException("No items on stack");
         }
@@ -141,12 +131,12 @@ public final class BuildResultStack {
 
             return (PeriodNode) item.getBuilt();
         } catch (ClassCastException cce) {
-            throw new CQLException("Expecting Period",
-                item.getToken(), cce, this.cqlSource);
+            throw new CQLException("Expecting Period", item.getToken(), cce, this.cqlSource);
         } catch (EmptyStackException ese) {
             throw new CQLException("No items on stack");
         }
     }
+
     public Period popPeriod() throws CQLException {
         Result item = null;
 
@@ -156,16 +146,15 @@ public final class BuildResultStack {
             PeriodNode periodNode = (PeriodNode) item.getBuilt();
             Literal begin = periodNode.getBeginning();
             Literal end = periodNode.getEnding();
-            
-    		Position ip1 = new DefaultPosition((Date) begin.getValue());
-    		Position ip2 = new DefaultPosition((Date) end.getValue());
-    		Period period = new DefaultPeriod(new DefaultInstant(ip1),new DefaultInstant(ip2 ));
-            
+
+            Position ip1 = new DefaultPosition((Date) begin.getValue());
+            Position ip2 = new DefaultPosition((Date) end.getValue());
+            Period period = new DefaultPeriod(new DefaultInstant(ip1), new DefaultInstant(ip2));
+
             return period;
-            
+
         } catch (ClassCastException cce) {
-            throw new CQLException("Expecting Period",
-                item.getToken(), cce, this.cqlSource);
+            throw new CQLException("Expecting Period", item.getToken(), cce, this.cqlSource);
         } catch (EmptyStackException ese) {
             throw new CQLException("No items on stack");
         }
@@ -174,7 +163,7 @@ public final class BuildResultStack {
     public double popDoubleValue() throws CQLException {
         try {
             Literal expr = this.popLiteral();
-            Double number = new Double(expr.getValue().toString());
+            Double number = Double.valueOf(expr.getValue().toString());
 
             return number.doubleValue();
         } catch (ClassCastException cce) {
@@ -185,11 +174,11 @@ public final class BuildResultStack {
     public int popIntegerValue() throws CQLException {
         try {
             Literal expr = this.popLiteral();
-            Integer number = (Integer) expr.getValue();
+            Number number = (Number) expr.getValue();
 
             return number.intValue();
         } catch (ClassCastException cce) {
-            throw new CQLException("Expected double");
+            throw new CQLException("Expected integer");
         }
     }
 
@@ -227,12 +216,12 @@ public final class BuildResultStack {
             Geometry g = (Geometry) result.getBuilt();
 
             return g;
-            
+
         } catch (ClassCastException e) {
             throw new CQLException("fail in geometry parsing");
         }
     }
-    
+
     public void push(Result item) {
         stack.push(item);
     }
@@ -240,6 +229,4 @@ public final class BuildResultStack {
     public int size() {
         return stack.size();
     }
-
-
 }
