@@ -1,7 +1,7 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2002-2008, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
@@ -17,7 +17,6 @@
 package org.geotools.filter.text.cql2;
 
 import java.util.List;
-
 import org.geotools.filter.function.FilterFunction_relatePattern;
 import org.geotools.filter.function.FilterFunction_strConcat;
 import org.geotools.filter.text.ecql.ECQL;
@@ -35,32 +34,21 @@ import org.opengis.filter.expression.Function;
 import org.opengis.filter.expression.Literal;
 import org.opengis.filter.expression.PropertyName;
 
-
 /**
  * Test the extensions in CQL.
- * 
- * <p>
- * We adds some extension to Common CQL thinking in convenient uses. 
- * In the future we could have different dialects of CQL. That will 
- * required extend the interface to allow selecting the dialect to use. 
- * </p>
+ *
+ * <p>We adds some extension to Common CQL thinking in convenient uses. In the future we could have
+ * different dialects of CQL. That will required extend the interface to allow selecting the dialect
+ * to use.
  *
  * @author Mauricio Pazos (Axios Engineering)
  * @since 2.5
- *
- *
- *
- * @source $URL$
  * @version Revision: 1.9
  */
-public class CQLExtensionTest{
+public class CQLExtensionTest {
     private static final String DELIMITER = ";";
 
-    /**
-     * An INCLUDE token is parsed as {@link Filter#INCLUDE}
-     *
-     * @throws Exception
-     */
+    /** An INCLUDE token is parsed as {@link Filter#INCLUDE} */
     @Test
     public void testIncludeFilter() throws Exception {
         Filter filter = CQL.toFilter("INCLUDE");
@@ -75,13 +63,8 @@ public class CQLExtensionTest{
         Assert.assertNotNull(filter);
         Assert.assertTrue(Filter.INCLUDE.equals(filter));
     }
-    
 
-    /**
-     * An EXCLUDE token is parsed as {@link Filter#EXCLUDE}
-     *
-     * @throws Exception
-     */
+    /** An EXCLUDE token is parsed as {@link Filter#EXCLUDE} */
     @Test
     public void testExcludeFilter() throws Exception {
         Filter filter = CQL.toFilter("EXCLUDE");
@@ -99,16 +82,17 @@ public class CQLExtensionTest{
 
     /**
      * Simple test for sequence of search conditions with only one filter [*]
+     *
      * <p>
+     *
      * <pre>
-     * &lt;SequenceOfSearchConditions &gt; ::= 
+     * &lt;SequenceOfSearchConditions &gt; ::=
      *          &lt;search condition&gt; [*]
      *     |    &lt;SequenceOfSearchConditions&gt; ; &lt;search condition&gt;
      *
      * </pre>
-     * <p> 
-     * 
-     * @throws Exception
+     *
+     * <p>
      */
     @Test
     public void testSequenceOfSearchConditionsWithOneFilter() throws Exception {
@@ -127,28 +111,32 @@ public class CQLExtensionTest{
 
     /**
      * Simple test for sequence of search conditions with only one filter [*]
+     *
      * <p>
+     *
      * <pre>
-     * &lt;SequenceOfSearchConditions &gt; ::= 
-     *          &lt;search condition&gt; 
+     * &lt;SequenceOfSearchConditions &gt; ::=
+     *          &lt;search condition&gt;
      *     |    &lt;SequenceOfSearchConditions&gt; ; &lt;search condition&gt; [*]
      *
      * </pre>
-     * <p> 
-     * Sample: attr1 > 5;attr2 between 1 and 7;attr3
      *
-     * @throws Exception
+     * <p>Sample: attr1 > 5;attr2 between 1 and 7;attr3
      */
     @Test
     public void testSequenceOfSearchConditionsWithManyFilters() throws Exception {
         String valueWithDelimiter = "text" + DELIMITER + "with" + DELIMITER + "delimiter";
 
         // "attr1 > 5; attr2 between 1 and 7; attr3 = 'text;with;delimiter
-        final String filterListStr = 
-                "attr1 > 5" + DELIMITER + 
-                "attr2 between 1 and 7" + DELIMITER +   
-                "attr3 = '" + valueWithDelimiter + "'";
-        
+        final String filterListStr =
+                "attr1 > 5"
+                        + DELIMITER
+                        + "attr2 between 1 and 7"
+                        + DELIMITER
+                        + "attr3 = '"
+                        + valueWithDelimiter
+                        + "'";
+
         List<Filter> filters = CQL.toFilterList(filterListStr);
         Assert.assertNotNull(filters);
         Assert.assertEquals(3, filters.size());
@@ -158,31 +146,32 @@ public class CQLExtensionTest{
 
         PropertyIsGreaterThan gt = (PropertyIsGreaterThan) filters.get(0);
         Assert.assertEquals("attr1", ((PropertyName) gt.getExpression1()).getPropertyName());
-        Assert.assertEquals(new Long(5), ((Literal) gt.getExpression2()).getValue());
+        Assert.assertEquals(Long.valueOf(5), ((Literal) gt.getExpression2()).getValue());
 
         PropertyIsBetween btw = (PropertyIsBetween) filters.get(1);
         Assert.assertEquals("attr2", ((PropertyName) btw.getExpression()).getPropertyName());
-        Assert.assertEquals(new Long(1), ((Literal) btw.getLowerBoundary()).getValue());
-        Assert.assertEquals(new Long(7), ((Literal) btw.getUpperBoundary()).getValue());
+        Assert.assertEquals(Long.valueOf(1), ((Literal) btw.getLowerBoundary()).getValue());
+        Assert.assertEquals(Long.valueOf(7), ((Literal) btw.getUpperBoundary()).getValue());
 
         PropertyIsEqualTo equals = (PropertyIsEqualTo) filters.get(2);
         Assert.assertEquals("attr3", ((PropertyName) equals.getExpression1()).getPropertyName());
         Assert.assertEquals(valueWithDelimiter, ((Literal) equals.getExpression2()).getValue());
     }
 
-    /**
-     * An empty filter int the constraints list shall be parsed as
-     * {@link Filter#INCLUDE}
-     *
-     * @throws Exception
-     */
+    /** An empty filter int the constraints list shall be parsed as {@link Filter#INCLUDE} */
     @Test
     public void testParseFilterListWithEmptyFilter() throws Exception {
         String valueWithDelimiter = "text" + DELIMITER + "with" + DELIMITER + "delimiter";
 
         // "attr1 > 5;INCLUDE;attr3 = 'text;with;delimiter'"
-        String filterListStr = "attr1 > 5" + DELIMITER + "INCLUDE" + DELIMITER + " attr3 = '"
-            + valueWithDelimiter + "'";
+        String filterListStr =
+                "attr1 > 5"
+                        + DELIMITER
+                        + "INCLUDE"
+                        + DELIMITER
+                        + " attr3 = '"
+                        + valueWithDelimiter
+                        + "'";
         List<Filter> filters = CQL.toFilterList(filterListStr);
         Assert.assertNotNull(filters);
         Assert.assertEquals(3, filters.size());
@@ -192,46 +181,46 @@ public class CQLExtensionTest{
 
         PropertyIsGreaterThan gt = (PropertyIsGreaterThan) filters.get(0);
         Assert.assertEquals("attr1", ((PropertyName) gt.getExpression1()).getPropertyName());
-        Assert.assertEquals(new Long(5), ((Literal) gt.getExpression2()).getValue());
+        Assert.assertEquals(Long.valueOf(5), ((Literal) gt.getExpression2()).getValue());
 
         PropertyIsEqualTo equals = (PropertyIsEqualTo) filters.get(2);
         Assert.assertEquals("attr3", ((PropertyName) equals.getExpression1()).getPropertyName());
         Assert.assertEquals(valueWithDelimiter, ((Literal) equals.getExpression2()).getValue());
 
-        filterListStr = "EXCLUDE" + DELIMITER + "INCLUDE" + DELIMITER + "attr3 = '"
-            + valueWithDelimiter + "'";
+        filterListStr =
+                "EXCLUDE"
+                        + DELIMITER
+                        + "INCLUDE"
+                        + DELIMITER
+                        + "attr3 = '"
+                        + valueWithDelimiter
+                        + "'";
 
         filters = CQL.toFilterList(filterListStr);
         Assert.assertTrue(filters.get(0) instanceof ExcludeFilter);
         Assert.assertTrue(filters.get(1) instanceof IncludeFilter);
         Assert.assertTrue(filters.get(2) instanceof PropertyIsEqualTo);
     }
-    /**
-     * Tests null factory as parameter.
-     * 
-     * @throws Exception
-     */
+    /** Tests null factory as parameter. */
     @Test
     public void testNullFilterFactory() throws Exception {
-        
-        CQL.toFilter( "attName > 20", null );
-        
-        CQL.toExpression( "2+2", null);
+
+        CQL.toFilter("attName > 20", null);
+
+        CQL.toExpression("2+2", null);
     }
 
     /**
      * Test Function Expression
      *
-     * Note: this solves the bug GEOT-1167
-     *
-     * @throws Exception
+     * <p>Note: this solves the bug GEOT-1167
      */
     @Test
     public void testFuncitionExpression() throws Exception {
         Expression arg1;
         Expression arg2;
         Expression resultExpr;
-        
+
         final String cqlExpression = "strConcat(A, B)";
 
         // simple attribute as argument
@@ -276,13 +265,10 @@ public class CQLExtensionTest{
 
         final String arg2Expected = arg2Name.replace('.', '/');
         Assert.assertEquals(arg2Expected, ((PropertyName) arg2).getPropertyName());
-
     }
-    
-    
+
     /**
-     * This test the following improvement: GEOT-1169 This is an extension the
-     * CQL specification.
+     * This test the following improvement: GEOT-1169 This is an extension the CQL specification.
      *
      * <pre>
      *  &lt;function&gt; ::= &lt;routine name &gt; &lt;argument list &gt; [*]
@@ -296,12 +282,9 @@ public class CQLExtensionTest{
      *   |   &lt;function&gt;           [*]
      *   |   &lt;binary expression&gt;  [*]
      * </pre>
-     * 
-     * @throws Exception
      */
     @Test
-    public void testFunctionComposition()
-        throws Exception {
+    public void testFunctionComposition() throws Exception {
         String cqlExpression;
         Expression expression;
 
@@ -309,7 +292,7 @@ public class CQLExtensionTest{
         cqlExpression = "strConcat(A, abs(B))";
         expression = CQL.toExpression(cqlExpression);
 
-        // Test 2 
+        // Test 2
         cqlExpression = "strConcat(A, strConcat(B, strConcat(C, '.')))";
         expression = CQL.toExpression(cqlExpression);
         Assert.assertNotNull(expression);
@@ -342,17 +325,15 @@ public class CQLExtensionTest{
         Assert.assertTrue(arg2 instanceof Literal);
         Assert.assertEquals(".", ((Literal) arg2).getValue());
     }
-    
-    /**
-     * complex case
-     * Created to analyze  http://jira.codehaus.org/browse/GEOT-1655
-     * @throws Exception
-     */
+
+    /** complex case Created to analyze http://jira.codehaus.org/browse/GEOT-1655 */
     @Test
     public void testFunctionCompositionComplexCase() throws Exception {
 
-        Expression result = CQL.toExpression("strConcat( strConcat(QS, strConcat('/', RT)), strConcat(strConcat('/', NUMB), strConcat('/', BSUFF)) )");
-        
+        Expression result =
+                CQL.toExpression(
+                        "strConcat( strConcat(QS, strConcat('/', RT)), strConcat(strConcat('/', NUMB), strConcat('/', BSUFF)) )");
+
         assertFunctionCompositionComplex(result);
     }
 
@@ -360,24 +341,27 @@ public class CQLExtensionTest{
     public void testFunctionCompositionComplexCaseInFilter() throws Exception {
 
         final String propName = "A";
-        Filter result = CQL.toFilter(propName + " = strConcat( strConcat(QS, strConcat('/', RT)), strConcat(strConcat('/', NUMB), strConcat('/', BSUFF)) )"); 
+        Filter result =
+                CQL.toFilter(
+                        propName
+                                + " = strConcat( strConcat(QS, strConcat('/', RT)), strConcat(strConcat('/', NUMB), strConcat('/', BSUFF)) )");
 
-        Assert.assertTrue( result instanceof PropertyIsEqualTo);
+        Assert.assertTrue(result instanceof PropertyIsEqualTo);
         PropertyIsEqualTo eq = (PropertyIsEqualTo) result;
-        
+
         Expression expr1 = eq.getExpression1();
         Assert.assertTrue(expr1 instanceof PropertyName);
-        PropertyName prop = (PropertyName)expr1;
+        PropertyName prop = (PropertyName) expr1;
         Assert.assertEquals(propName, prop.getPropertyName());
-        
+
         Expression expr2 = eq.getExpression2();
         assertFunctionCompositionComplex(expr2);
-       
     }
     /**
-     * @param result strConcat( strConcat(QS, strConcat('/', RT)), strConcat(strConcat('/', NUMB), strConcat('/', BSUFF)) )")
+     * @param result strConcat( strConcat(QS, strConcat('/', RT)), strConcat(strConcat('/', NUMB),
+     *     strConcat('/', BSUFF)) )")
      */
-    private void assertFunctionCompositionComplex(final Expression result){
+    private void assertFunctionCompositionComplex(final Expression result) {
 
         Assert.assertTrue(result instanceof Function);
 
@@ -390,27 +374,27 @@ public class CQLExtensionTest{
 
         Function function1 = (Function) arg1;
         Assert.assertEquals(2, function1.getParameters().size());
-        
+
         Expression funcion1Arg1 = function1.getParameters().get(0);
         Assert.assertTrue(funcion1Arg1 instanceof PropertyName);
-        Assert.assertEquals("QS", ((PropertyName)funcion1Arg1).getPropertyName() );
-        
+        Assert.assertEquals("QS", ((PropertyName) funcion1Arg1).getPropertyName());
+
         Expression arg11 = (Expression) function1.getParameters().get(1);
         Assert.assertTrue(arg11 instanceof Function);
         Function function11 = (Function) arg11;
-        
-        Expression funcion11Arg1 = (Expression)function11.getParameters().get(0);
+
+        Expression funcion11Arg1 = (Expression) function11.getParameters().get(0);
         Assert.assertTrue(funcion11Arg1 instanceof Literal);
         Assert.assertEquals("/", ((Literal) funcion11Arg1).getValue());
-        
+
         // asserts for strConcat(strConcat('/', NUMB), strConcat('/', BSUFF)) )"
         Expression arg2 = (Expression) function.getParameters().get(1);
         Assert.assertTrue(arg2 instanceof Function);
-     
     }
-    
+
     /**
      * Test for Function Unary Expressions with functions in CQL.
+     *
      * <p>
      *
      * <pre>
@@ -421,8 +405,6 @@ public class CQLExtensionTest{
      *   |   ( &lt;Expression &gt;)
      *   |   [ &lt;Expression &gt;]
      * </pre>
-     *
-     * </p>
      */
     @Test
     public void testUnaryExpressionFunction() throws Exception {
@@ -437,7 +419,7 @@ public class CQLExtensionTest{
 
         expected = FilterCQLSample.getSample(cqlUnaryExp);
 
-        Assert.assertEquals( "Equals Functions is expected", expected,result);
+        Assert.assertEquals("Equals Functions is expected", expected, result);
 
         // Key: GEOT-1167 type: BUG
         cqlUnaryExp = FilterCQLSample.FILTER__WITH_FUNCTION_STR_CONCAT;
@@ -446,9 +428,13 @@ public class CQLExtensionTest{
 
         expected = FilterCQLSample.getSample(cqlUnaryExp);
 
-        Assert.assertTrue( "Functions", result instanceof PropertyIsEqualTo);
-        Assert.assertTrue( "Attribute is expecteced", ((PropertyIsEqualTo)result).getExpression1() instanceof PropertyName );  
-        Assert.assertTrue( "Attribute is expecteced", ((PropertyIsEqualTo)result).getExpression2() instanceof FilterFunction_strConcat );  
+        Assert.assertTrue("Functions", result instanceof PropertyIsEqualTo);
+        Assert.assertTrue(
+                "Attribute is expecteced",
+                ((PropertyIsEqualTo) result).getExpression1() instanceof PropertyName);
+        Assert.assertTrue(
+                "Attribute is expecteced",
+                ((PropertyIsEqualTo) result).getExpression2() instanceof FilterFunction_strConcat);
 
         // test for improvement Key: GEOT-1168
         cqlUnaryExp = "A = strConcat(B, 'testParam')";
@@ -471,27 +457,28 @@ public class CQLExtensionTest{
         Assert.assertEquals("B", ((PropertyName) arg1).getPropertyName());
         Assert.assertEquals("testParam", ((Literal) arg2).getValue());
     }
-    
+
     @Test
-    public void relateFunction() throws CQLException{
-        
-        Filter resultFilter = ECQL.toFilter(
-                "ATTR = relatePattern(the_geom, 'LINESTRING (27.3 37, 27.3 37.6)', '**1****') " );
+    public void relateFunction() throws CQLException {
+
+        Filter resultFilter =
+                ECQL.toFilter(
+                        "ATTR = relatePattern(the_geom, 'LINESTRING (27.3 37, 27.3 37.6)', '**1****') ");
 
         Assert.assertTrue(resultFilter instanceof PropertyIsEqualTo);
 
-        // relate function in an equal predicate 
-        resultFilter = ECQL.toFilter(
-                "relatePattern(the_geom, 'LINESTRING (27.3 37, 27.3 37.6)', '**1****') = TRUE" );
+        // relate function in an equal predicate
+        resultFilter =
+                ECQL.toFilter(
+                        "relatePattern(the_geom, 'LINESTRING (27.3 37, 27.3 37.6)', '**1****') = TRUE");
 
         Assert.assertTrue(resultFilter instanceof PropertyIsEqualTo);
 
         // relate function to expression
-        Expression resultExpression = ECQL.toExpression(
-                "relatePattern(the_geom, 'LINESTRING (27.3 37, 27.3 37.6)', '**1****') " );
+        Expression resultExpression =
+                ECQL.toExpression(
+                        "relatePattern(the_geom, 'LINESTRING (27.3 37, 27.3 37.6)', '**1****') ");
 
         Assert.assertTrue(resultExpression instanceof FilterFunction_relatePattern);
     }
-
-    
 }
