@@ -1,7 +1,7 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2002-2008, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
@@ -17,39 +17,33 @@
 package org.geotools.data.jdbc;
 
 import java.util.logging.Logger;
-
 import junit.framework.TestCase;
-
-import org.geotools.feature.IllegalAttributeException;
 import org.geotools.feature.SchemaException;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
+import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
+import org.locationtech.jts.geom.LineString;
+import org.opengis.feature.IllegalAttributeException;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.feature.simple.SimpleFeatureType;
-
-import com.vividsolutions.jts.geom.Coordinate;
-import com.vividsolutions.jts.geom.GeometryFactory;
-import com.vividsolutions.jts.geom.LineString;
-
 
 /**
  * Common filter testing code factored up here.
  *
  * @author Chris Holmes
- *
- *
- * @source $URL$
  */
 public abstract class SQLFilterTestSupport extends TestCase {
     /** Standard logging instance */
-    protected static final Logger LOGGER = org.geotools.util.logging.Logging.getLogger(
-            "org.geotools.filter");
+    protected static final Logger LOGGER =
+            org.geotools.util.logging.Logging.getLogger(SQLFilterTestSupport.class);
 
     /** Schema on which to preform tests */
     protected static SimpleFeatureType testSchema = null;
 
     /** Schema on which to preform tests */
     protected static SimpleFeature testFeature = null;
+
     protected boolean setup = false;
 
     /**
@@ -71,25 +65,25 @@ public abstract class SQLFilterTestSupport extends TestCase {
         setup = true;
     }
 
-    protected void prepareFeatures()
-        throws SchemaException, IllegalAttributeException {
-        //_log.getLoggerRepository().setThreshold(Level.INFO);
+    protected void prepareFeatures() throws SchemaException, IllegalAttributeException {
+        // _log.getLoggerRepository().setThreshold(Level.INFO);
         // Create the schema attributes
         LOGGER.finer("creating flat feature...");
 
         SimpleFeatureTypeBuilder ftb = new SimpleFeatureTypeBuilder();
-    	ftb.add("testGeometry", LineString.class);
-    	ftb.add("testBoolean", Boolean.class);
-    	ftb.add("testCharacter", Character.class);
-    	ftb.add("testByte", Byte.class);
-    	ftb.add("testShort", Short.class);
-    	ftb.add("testInteger", Integer.class);
-    	ftb.add("testLong", Long.class);
-    	ftb.add("testFloat", Float.class);
-    	ftb.add("testDouble", Double.class);
-    	ftb.add("testString", String.class);
-    	ftb.add("testZeroDouble", Double.class);
-    	ftb.setName("testSchema");
+        ftb.add("testGeometry", LineString.class);
+        ftb.add("testBoolean", Boolean.class);
+        ftb.add("testCharacter", Character.class);
+        ftb.add("testByte", Byte.class);
+        ftb.add("testShort", Short.class);
+        ftb.add("testInteger", Integer.class);
+        ftb.add("testLong", Long.class);
+        ftb.add("testFloat", Float.class);
+        ftb.add("testDouble", Double.class);
+        ftb.add("testString", String.class);
+        ftb.add("testZeroDouble", Double.class);
+        ftb.add("testArray", String[].class);
+        ftb.setName("testSchema");
         testSchema = ftb.buildFeatureType();
 
         GeometryFactory geomFac = new GeometryFactory();
@@ -103,20 +97,20 @@ public abstract class SQLFilterTestSupport extends TestCase {
         // Builds the test feature
         Object[] attributes = new Object[10];
         attributes[0] = geomFac.createLineString(coords);
-        attributes[1] = new Boolean(true);
-        attributes[2] = new Character('t');
-        attributes[3] = new Byte("10");
-        attributes[4] = new Short("101");
-        attributes[5] = new Integer(1002);
-        attributes[6] = new Long(10003);
-        attributes[7] = new Float(10000.4);
-        attributes[8] = new Double(100000.5);
+        attributes[1] = Boolean.valueOf(true);
+        attributes[2] = Character.valueOf('t');
+        attributes[3] = Byte.valueOf("10");
+        attributes[4] = Short.valueOf("101");
+        attributes[5] = Integer.valueOf(1002);
+        attributes[6] = Long.valueOf(10003);
+        attributes[7] = Float.valueOf(10000.4f);
+        attributes[8] = Double.valueOf(100000.5);
         attributes[9] = "test string data";
 
         // Creates the feature itself
         testFeature = SimpleFeatureBuilder.build(testSchema, attributes, null);
         LOGGER.finer("...flat feature created");
 
-        //_log.getLoggerRepository().setThreshold(Level.DEBUG);
+        // _log.getLoggerRepository().setThreshold(Level.DEBUG);
     }
 }
