@@ -1,9 +1,9 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2005-2008, Open Source Geospatial Foundation (OSGeo)
- *    
+ *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
  *    License as published by the Free Software Foundation;
@@ -17,11 +17,13 @@
 package org.geotools.feature.visitor;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-
+import java.util.Optional;
 import org.geotools.data.simple.SimpleFeatureCollection;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.filter.IllegalFilterException;
+import org.opengis.feature.Feature;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.feature.simple.SimpleFeatureType;
 import org.opengis.feature.type.AttributeDescriptor;
@@ -32,20 +34,17 @@ import org.opengis.filter.expression.Expression;
  * Calculates the Average
  *
  * @author Cory Horner, Refractions
- *
  * @since 2.2.M2
- *
- *
- * @source $URL$
  */
 public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
     private Expression expr;
 
     /**
-     * This flag lets us know that an optimized result was stored and therefore
-     * we don't have enough data to perform any merges.
+     * This flag lets us know that an optimized result was stored and therefore we don't have enough
+     * data to perform any merges.
      */
     private boolean isOptimized = false;
+
     AverageStrategy strategy;
 
     /**
@@ -53,11 +52,9 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
      *
      * @param attributeTypeIndex integer representing the AttributeDescriptor
      * @param type FeatureType
-     *
-     * @throws IllegalFilterException
      */
     public AverageVisitor(int attributeTypeIndex, SimpleFeatureType type)
-        throws IllegalFilterException {
+            throws IllegalFilterException {
         FilterFactory factory = CommonFactoryFinder.getFilterFactory(null);
         AttributeDescriptor attributeType = type.getDescriptor(attributeTypeIndex);
         expr = factory.property(attributeType.getLocalName());
@@ -69,30 +66,21 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
      *
      * @param attrName string respresenting the AttributeDescriptor
      * @param type FeatureType
-     *
-     * @throws IllegalFilterException
      */
-    public AverageVisitor(String attrName, SimpleFeatureType type)
-        throws IllegalFilterException {
+    public AverageVisitor(String attrName, SimpleFeatureType type) throws IllegalFilterException {
         FilterFactory factory = CommonFactoryFinder.getFilterFactory(null);
         AttributeDescriptor attributeType = type.getDescriptor(attrName);
         expr = factory.property(attributeType.getLocalName());
         createStrategy(attributeType.getType().getBinding());
     }
 
-    /**
-     * Constructor class for the AverageVisitor using an expression
-     *
-     * @param expr
-     *
-     * @throws IllegalFilterException
-     */
+    /** Constructor class for the AverageVisitor using an expression */
     public AverageVisitor(Expression expr) throws IllegalFilterException {
         this.expr = expr;
     }
 
     public void init(SimpleFeatureCollection collection) {
-    	//do nothing
+        // do nothing
     }
 
     @Override
@@ -100,15 +88,27 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         return Arrays.asList(expr);
     }
 
+    @Override
+    public Optional<List<Class>> getResultType(List<Class> inputTypes) {
+        if (inputTypes == null || inputTypes.size() != 1)
+            throw new IllegalArgumentException(
+                    "Expecting a single type in input, not " + inputTypes);
+
+        Class type = inputTypes.get(0);
+        if (Number.class.isAssignableFrom(type)) {
+            return Optional.of(Collections.singletonList(Double.class));
+        }
+        throw new IllegalArgumentException(
+                "The input type for sum must be numeric, instead this was found: " + type);
+    }
+
     /**
      * Factory method for creating the appropriate strategy object
-     * 
-     * <P></p>
+     *
+     * <p>
      *
      * @param type the class to use for the calculation
-     *
-     * @return a strategy object of the correct data type to be used for
-     *         calculating the average
+     * @return a strategy object of the correct data type to be used for calculating the average
      */
     private static AverageStrategy createStrategy(Class type) {
         if (type == Integer.class) {
@@ -117,18 +117,17 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
             return new LongAverageStrategy();
         } else if (type == Float.class) {
             return new FloatAverageStrategy();
-        } else if (Number.class.isAssignableFrom(type))
-            return new DoubleAverageStrategy();
+        } else if (Number.class.isAssignableFrom(type)) return new DoubleAverageStrategy();
 
         return null;
     }
 
     public void visit(SimpleFeature feature) {
-        visit(feature);
+        visit((Feature) feature);
     }
-    
+
     public void visit(org.opengis.feature.Feature feature) {
-    	Object value = expr.evaluate(feature);
+        Object value = expr.evaluate(feature);
 
         if (value != null) {
             if (strategy == null) {
@@ -153,22 +152,17 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         return strategy.getResult();
     }
 
-    /**
-     * Resets the "Average" strategy pattern
-     */
+    /** Resets the "Average" strategy pattern */
     public void reset() {
         strategy = null;
         isOptimized = false;
     }
 
-    /**
-     * Returns a CalcResult object (containing the Average)
-     *
-     */
+    /** Returns a CalcResult object (containing the Average) */
     public CalcResult getResult() {
-    	if(strategy == null) {
-    		return CalcResult.NULL_RESULT;
-    	}
+        if (strategy == null) {
+            return CalcResult.NULL_RESULT;
+        }
         return new AverageResult(strategy, isOptimized);
     }
 
@@ -191,9 +185,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         // in fact visited each feature
     }
 
-    /**
-     * Encapsulates the strategy pattern for the "Average" Visitor
-     */
+    /** Encapsulates the strategy pattern for the "Average" Visitor */
     interface AverageStrategy {
         public void add(Object value);
 
@@ -206,9 +198,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         public void set(int count, Object sum);
     }
 
-    /**
-     * Implements the average calculation for values of the type double
-     */
+    /** Implements the average calculation for values of the type double */
     static class DoubleAverageStrategy implements AverageStrategy {
         double number = 0;
         int count = 0;
@@ -219,11 +209,11 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
 
         public Object getResult() {
-            return new Double(number / count);
+            return Double.valueOf(number / count);
         }
 
         public Object getSum() {
-            return new Double(number);
+            return Double.valueOf(number);
         }
 
         public int getCount() {
@@ -236,9 +226,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
     }
 
-    /**
-     * Implements the average calculation for values of the type float
-     */
+    /** Implements the average calculation for values of the type float */
     static class FloatAverageStrategy implements AverageStrategy {
         float number = 0;
         int count = 0;
@@ -249,11 +237,11 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
 
         public Object getResult() {
-            return new Float((float) number / count);
+            return Float.valueOf((float) number / count);
         }
 
         public Object getSum() {
-            return new Float(number);
+            return Float.valueOf(number);
         }
 
         public int getCount() {
@@ -266,9 +254,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
     }
 
-    /**
-     * Implements the average calculation for values of the type long
-     */
+    /** Implements the average calculation for values of the type long */
     static class LongAverageStrategy implements AverageStrategy {
         long number = 0;
         int count = 0;
@@ -279,11 +265,11 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
 
         public Object getResult() {
-            return new Double((double) number / count);
+            return Double.valueOf((double) number / count);
         }
 
         public Object getSum() {
-            return new Long(number);
+            return Long.valueOf(number);
         }
 
         public int getCount() {
@@ -296,9 +282,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
     }
 
-    /**
-     * Implements the average calculation for values of the type integer
-     */
+    /** Implements the average calculation for values of the type integer */
     static class IntegerAverageStrategy implements AverageStrategy {
         int number = 0;
         int count = 0;
@@ -309,11 +293,11 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
 
         public Object getResult() {
-            return new Double((double) number / count);
+            return Double.valueOf((double) number / count);
         }
 
         public Object getSum() {
-            return new Integer(number);
+            return Integer.valueOf(number);
         }
 
         public int getCount() {
@@ -326,9 +310,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
     }
 
-    /**
-     *
-     */
+    /** */
     public static class AverageResult extends AbstractCalcResult {
         private AverageStrategy averageStrategy;
         private boolean isOptimized = false;
@@ -362,16 +344,13 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
          */
         public int getCount() {
             if (isOptimized) {
-                return -1; //there is no count, as an optimization was used.
+                return -1; // there is no count, as an optimization was used.
             } else {
                 return averageStrategy.getCount();
             }
         }
 
-        /**
-         * The sum used to calculate the average
-         *
-         */
+        /** The sum used to calculate the average */
         public Object getSum() {
             if (isOptimized) {
                 return null;
@@ -381,11 +360,9 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
 
         /**
-         * Determines if the target CalcResult object can be merged with this
-         * CalcResult object
+         * Determines if the target CalcResult object can be merged with this CalcResult object
          *
          * @param targetResults a second CalcResult object (target)
-         *
          * @return boolean
          */
         public boolean isCompatible(CalcResult targetResults) {
@@ -397,44 +374,43 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
         }
 
         /**
-         * Merges the contents of a CalcResult Object with another CalcResult
-         * Object.   If the two CalcResult objects are compatible, the merged
-         * result (a new object) is returned.
+         * Merges the contents of a CalcResult Object with another CalcResult Object. If the two
+         * CalcResult objects are compatible, the merged result (a new object) is returned.
          *
          * @param resultsToAdd the CalcResult to merge the results with
-         *
          * @return a new merged CalcResult object
-         *
-         * @throws IllegalArgumentException when the resultsToAdd are
-         *         inappropriate
+         * @throws IllegalArgumentException when the resultsToAdd are inappropriate
          */
         public CalcResult merge(CalcResult resultsToAdd) {
             if (!isCompatible(resultsToAdd)) {
-                throw new IllegalArgumentException(
-                    "Parameter is not a compatible type");
+                throw new IllegalArgumentException("Parameter is not a compatible type");
             }
-            
-            if(resultsToAdd == CalcResult.NULL_RESULT) {
-        		return this;
-        	}
+
+            if (resultsToAdd == CalcResult.NULL_RESULT) {
+                return this;
+            }
 
             if (resultsToAdd instanceof AverageResult) {
                 AverageResult moreResults = (AverageResult) resultsToAdd;
 
-                //ensure both results are NOT optimized
+                // ensure both results are NOT optimized
                 if (isOptimized || moreResults.isOptimized) {
                     throw new IllegalArgumentException(
-                        "Optimized average results cannot be merged.");
+                            "Optimized average results cannot be merged.");
                 }
 
-                Number[] sums = new Number[] {
-                        (Number) averageStrategy.getSum(),
-                        (Number) moreResults.averageStrategy.getSum()
-                    };
+                Number[] sums =
+                        new Number[] {
+                            (Number) averageStrategy.getSum(),
+                            (Number) moreResults.averageStrategy.getSum()
+                        };
                 Number newSum = CalcUtil.sum(sums);
-                Number newCount = (Number) new Integer(averageStrategy.getCount()
-                        + moreResults.averageStrategy.getCount());
-                Number[] params = new Number[] { newSum, newCount };
+                Number newCount =
+                        (Number)
+                                Integer.valueOf(
+                                        averageStrategy.getCount()
+                                                + moreResults.averageStrategy.getCount());
+                Number[] params = new Number[] {newSum, newCount};
                 Object newAverage = CalcUtil.getObject(params);
                 AverageStrategy newAverageObj;
                 newAverageObj = createStrategy(newAverage.getClass());
@@ -443,7 +419,7 @@ public class AverageVisitor implements FeatureCalc, FeatureAttributeVisitor {
                 return new AverageResult(newAverageObj);
             } else {
                 throw new IllegalArgumentException(
-                    "The CalcResults claim to be compatible, but the appropriate merge method has not been implemented.");
+                        "The CalcResults claim to be compatible, but the appropriate merge method has not been implemented.");
             }
         }
     }
