@@ -1,9 +1,9 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2005-2008, Open Source Geospatial Foundation (OSGeo)
- *    
+ *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
  *    License as published by the Free Software Foundation;
@@ -16,19 +16,13 @@
  */
 package org.geotools.feature.visitor;
 
+import java.util.List;
+import java.util.Optional;
 
-/**
- *
- *
- *
- * @source $URL$
- */
 public class CalcUtil {
 
-	/**
+    /**
      * Sums an array of numbers together while using the correct class type.
-     *
-     * @param numbers
      *
      * @return the sum contained in the most appropriate number class
      */
@@ -39,7 +33,7 @@ public class CalcUtil {
             return null;
         }
 
-        //Integer, Long, Float, Double
+        // Integer, Long, Float, Double
         if (newSum instanceof Integer) {
             int sum = 0;
             int nextValue;
@@ -49,7 +43,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Integer(sum);
+            newSum = Integer.valueOf(sum);
         } else if (newSum instanceof Long) {
             long sum = 0;
             long nextValue;
@@ -59,7 +53,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Long(sum);
+            newSum = Long.valueOf(sum);
         } else if (newSum instanceof Float) {
             float sum = 0;
             float nextValue;
@@ -69,7 +63,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Float(sum);
+            newSum = Float.valueOf(sum);
         } else if (newSum instanceof Double) {
             double sum = 0;
             double nextValue;
@@ -79,7 +73,7 @@ public class CalcUtil {
                 sum += nextValue;
             }
 
-            newSum = new Double(sum);
+            newSum = Double.valueOf(sum);
         } else {
             return null;
         }
@@ -89,7 +83,7 @@ public class CalcUtil {
 
     /**
      * Divides num1 by num2, and return the result in the correct number class.
-     * 
+     *
      * @param num1 numerator
      * @param num2 denominator
      * @return num1/num2 in the most appropriate class
@@ -105,37 +99,34 @@ public class CalcUtil {
             return null;
         }
 
-        //Integer, Long, Float, Double
+        // Integer, Long, Float, Double
         if (division instanceof Integer) {
-            //we've got 2 integers, but we're going to use double anyways
-            return new Double(num1.doubleValue() / num2.doubleValue());
+            // we've got 2 integers, but we're going to use double anyways
+            return Double.valueOf(num1.doubleValue() / num2.doubleValue());
         } else if (division instanceof Long) {
-            return new Long(num1.longValue() / num2.longValue());
+            return Long.valueOf(num1.longValue() / num2.longValue());
         } else if (division instanceof Float) {
-            return new Float(num1.floatValue() / num2.floatValue());
+            return Float.valueOf(num1.floatValue() / num2.floatValue());
         } else if (division instanceof Double) {
-            return new Double(num1.doubleValue() / num2.doubleValue());
+            return Double.valueOf(num1.doubleValue() / num2.doubleValue());
         } else {
             return null;
         }
     }
 
-    /**
-     * Calculates the average, and returns it in the correct class.
-     * @param numbers
-     */
+    /** Calculates the average, and returns it in the correct class. */
     static Number average(Number[] numbers) {
         Number sum = sum(numbers);
 
-        return divide(sum, new Integer(numbers.length));
+        return divide(sum, Integer.valueOf(numbers.length));
     }
 
     /**
      * Determines the most appropriate class to use for a multiclass calculation.
-     * 
-     * @param objects
+     *
      * @return the most
-     */static Class bestClass(Object[] objects) {
+     */
+    static Class bestClass(Object[] objects) {
         boolean hasInt = false;
         boolean hasFloat = false;
         boolean hasLong = false;
@@ -166,45 +157,39 @@ public class CalcUtil {
             return Long.class;
         } else if (hasInt) {
             return Integer.class;
-        } else { //it's a type we don't have here yet
+        } else { // it's a type we don't have here yet
 
             return null;
         }
     }
 
-    /**
-     * Casts an object to the specified type
-     *
-     * @param var
-     * @param type
-     *
-     */
+    /** Casts an object to the specified type */
     static Object convert(Object var, Class type) {
-        if (var instanceof Number) { //use number conversion
+        if (var instanceof Number) { // use number conversion
 
             Number newNum = (Number) var;
 
             if (type == Integer.class) {
-                return new Integer(newNum.intValue());
+                return Integer.valueOf(newNum.intValue());
             } else if (type == Long.class) {
-                return new Long(newNum.longValue());
+                return Long.valueOf(newNum.longValue());
             } else if (type == Float.class) {
-                return new Float(newNum.floatValue());
+                return Float.valueOf(newNum.floatValue());
             } else if (type == Double.class) {
-                return new Double(newNum.doubleValue());
+                return Double.valueOf(newNum.doubleValue());
             } else if (type == String.class) {
                 return new String(newNum.toString());
             }
-        } else { //direct cast
+        } else { // direct cast
 
             if (type == Integer.class) {
-                return new Integer(((Integer) var).intValue());
+                return Integer.valueOf(((Integer) var).intValue());
             } else if (type == Long.class) {
-                return new Long(((Long) var).longValue());
+                return Long.valueOf(((Long) var).longValue());
             } else if (type == Float.class) {
-                return new Float(((Float) var).floatValue());
+                return Float.valueOf(((Float) var).floatValue());
             } else if (type == Double.class) {
-                return new Double(((Double) var).doubleValue());
+                return Double.valueOf(((Double) var).doubleValue());
             } else if (type == String.class) {
                 return new String(var.toString());
             }
@@ -220,66 +205,55 @@ public class CalcUtil {
             Number newNum = (Number) var;
 
             if (newVar instanceof Integer) {
-                return new Integer(newNum.intValue());
+                return Integer.valueOf(newNum.intValue());
             } else if (newVar instanceof Long) {
-                return new Long(newNum.longValue());
+                return Long.valueOf(newNum.longValue());
             } else if (newVar instanceof Float) {
-                return new Float(newNum.floatValue());
+                return Float.valueOf(newNum.floatValue());
             } else if (newVar instanceof Double) {
-                return new Double(newNum.doubleValue());
+                return Double.valueOf(newNum.doubleValue());
             } else {
                 return null;
             }
         } else if (newVar instanceof String) {
             return new String((String) newVar);
         } else {
-            //TODO: add other classes
+            // TODO: add other classes
             return null;
         }
     }
 
     /**
-     * Given an array of objects, traverses the array and determines the most
-     * suitable data type to perform the calculation in. An empty object of
-     * the correct class is returned;
-     *
-     * @param objects
-     *
+     * Given an array of objects, traverses the array and determines the most suitable data type to
+     * perform the calculation in. An empty object of the correct class is returned;
      */
     static Object getObject(Object[] objects) {
-    	Class bestClass = bestClass(objects);
-    	
+        Class bestClass = bestClass(objects);
+
         if (bestClass == String.class) {
-            return new String(""); //$NON-NLS-1$
+            return ""; // $NON-NLS-1$
         } else if (bestClass == Double.class) {
-            return new Double(0);
+            return Double.valueOf(0);
         } else if (bestClass == Float.class) {
-            return new Float(0);
+            return Float.valueOf(0);
         } else if (bestClass == Long.class) {
-            return new Long(0);
+            return Long.valueOf(0);
         } else if (bestClass == Integer.class) {
-            return new Integer(0);
-        } else { //it's a type we don't have here yet
+            return Integer.valueOf(0);
+        } else { // it's a type we don't have here yet
             return null;
         }
     }
 
-    /**
-     * Similar to java.lang.Comparable.compareTo, but can handle 2 different
-     * data types.
-     *
-     * @param val1
-     * @param val2
-     *
-     */
+    /** Similar to java.lang.Comparable.compareTo, but can handle 2 different data types. */
     static int compare(Comparable val1, Comparable val2) {
         if (val1.getClass() == val2.getClass()) {
-            //both the same type, no conversion is necessary.
+            // both the same type, no conversion is necessary.
             return val1.compareTo(val2);
         }
 
-        //find most appropriate class
-        Object[] objects = new Object[] { val1, val2 };
+        // find most appropriate class
+        Object[] objects = new Object[] {val1, val2};
         Class bestClass = bestClass(objects);
 
         if (bestClass != val1.getClass()) {
@@ -290,7 +264,24 @@ public class CalcUtil {
             val2 = (Comparable) convert(val2, bestClass);
         }
 
-        //now do the comparison
+        // now do the comparison
         return val1.compareTo(val2);
+    }
+
+    /**
+     * Utility method for {@link FeatureAttributeVisitor} implementations that are simply returnin
+     * the same type as the inputs
+     *
+     * @param inputTypes
+     * @return
+     */
+    public static Optional<List<Class>> reflectInputTypes(
+            int expectedInputCount, List<Class> inputTypes) {
+        if (inputTypes == null || inputTypes.size() != 1)
+            throw new IllegalArgumentException(
+                    "Expecting " + expectedInputCount + " types in input, but got " + inputTypes);
+
+        // same as the input
+        return Optional.of(inputTypes);
     }
 }
