@@ -1,9 +1,9 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
- *    (C) 2002-2008, Open Source Geospatial Foundation (OSGeo)
- *    
+ *
+ *    (C) 2002-2015, Open Source Geospatial Foundation (OSGeo)
+ *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
  *    License as published by the Free Software Foundation;
@@ -23,12 +23,10 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
-import javax.measure.unit.Unit;
-import javax.swing.Icon;
-
+import javax.measure.Unit;
+import javax.swing.*;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.GeoTools;
+import org.geotools.util.factory.GeoTools;
 import org.opengis.feature.type.Name;
 import org.opengis.filter.Filter;
 import org.opengis.filter.FilterFactory2;
@@ -45,39 +43,36 @@ import org.opengis.style.OverlapBehavior;
 import org.opengis.style.SemanticType;
 import org.opengis.util.InternationalString;
 
-
 /**
- * Factory for creating Styles. All style elements are returned as Interfaces
- * from org.geotools.core as opposed to Implementations from org.geotools.defaultcore.
- * <p>
- * This class implements:
+ * Factory for creating Styles. All style elements are returned as Interfaces from org.geotools.core
+ * as opposed to Implementations from org.geotools.defaultcore.
+ *
+ * <p>This class implements:
+ *
  * <ul>
- * <li>StyleFactory for SLD 1.0
- * <li>StyleFactory2 for our own extension to text mark allowing a graphic beyond text
- * <li>org.opengis.style.StyleFactory for SE 1.1 
+ *   <li>StyleFactory for SLD 1.0
+ *   <li>StyleFactory2 for our own extension to text mark allowing a graphic beyond text
+ *   <li>org.opengis.style.StyleFactory for SE 1.1
  * </ul>
- * 
+ *
  * @author iant
- *
- *
- * @source $URL$
  * @version $Id$
  */
 public class StyleFactoryImpl extends AbstractStyleFactory
-    implements StyleFactory2, org.opengis.style.StyleFactory {
-	
+        implements StyleFactory2, org.opengis.style.StyleFactory {
+
     private FilterFactory2 filterFactory;
     private StyleFactoryImpl2 delegate;
-    
+
     public StyleFactoryImpl() {
-        this( CommonFactoryFinder.getFilterFactory2(GeoTools.getDefaultHints()));
+        this(CommonFactoryFinder.getFilterFactory2(GeoTools.getDefaultHints()));
     }
 
     protected StyleFactoryImpl(FilterFactory2 factory) {
         filterFactory = factory;
-        delegate = new StyleFactoryImpl2( filterFactory );
+        delegate = new StyleFactoryImpl2(filterFactory);
     }
-    
+
     public Style createStyle() {
         return new StyleImpl();
     }
@@ -90,8 +85,7 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return new PointSymbolizerImpl();
     }
 
-    public PointSymbolizer createPointSymbolizer(Graphic graphic,
-        String geometryPropertyName) {
+    public PointSymbolizer createPointSymbolizer(Graphic graphic, String geometryPropertyName) {
         PointSymbolizer pSymb = new PointSymbolizerImpl();
         pSymb.setGeometryPropertyName(geometryPropertyName);
         pSymb.setGraphic(graphic);
@@ -103,8 +97,8 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return new PolygonSymbolizerImpl();
     }
 
-    public PolygonSymbolizer createPolygonSymbolizer(Stroke stroke, Fill fill,
-        String geometryPropertyName) {
+    public PolygonSymbolizer createPolygonSymbolizer(
+            Stroke stroke, Fill fill, String geometryPropertyName) {
         PolygonSymbolizer pSymb = new PolygonSymbolizerImpl();
         pSymb.setGeometryPropertyName(geometryPropertyName);
         pSymb.setStroke(stroke);
@@ -117,8 +111,7 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return new LineSymbolizerImpl();
     }
 
-    public LineSymbolizer createLineSymbolizer(Stroke stroke,
-        String geometryPropertyName) {
+    public LineSymbolizer createLineSymbolizer(Stroke stroke, String geometryPropertyName) {
         LineSymbolizer lSymb = new LineSymbolizerImpl();
         lSymb.setGeometryPropertyName(geometryPropertyName);
         lSymb.setStroke(stroke);
@@ -130,37 +123,50 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return new TextSymbolizerImpl(filterFactory);
     }
 
-    public TextSymbolizer createTextSymbolizer(Fill fill, Font[] fonts,
-        Halo halo, Expression label, LabelPlacement labelPlacement,
-        String geometryPropertyName) {
+    public TextSymbolizer createTextSymbolizer(
+            Fill fill,
+            Font[] fonts,
+            Halo halo,
+            Expression label,
+            LabelPlacement labelPlacement,
+            String geometryPropertyName) {
         TextSymbolizer tSymb = new TextSymbolizerImpl(filterFactory);
         tSymb.setFill(fill);
-        tSymb.setFonts(fonts);
+        if (fonts != null) {
+            tSymb.fonts().addAll(Arrays.asList(fonts));
+        }
         tSymb.setGeometryPropertyName(geometryPropertyName);
 
         tSymb.setHalo(halo);
         tSymb.setLabel(label);
-        tSymb.setPlacement(labelPlacement);
+        tSymb.setLabelPlacement(labelPlacement);
 
         return tSymb;
     }
 
-    public TextSymbolizer2 createTextSymbolizer(Fill fill, Font[] fonts,
-        Halo halo, Expression label, LabelPlacement labelPlacement,
-        String geometryPropertyName, Graphic graphic) {
+    public TextSymbolizer2 createTextSymbolizer(
+            Fill fill,
+            Font[] fonts,
+            Halo halo,
+            Expression label,
+            LabelPlacement labelPlacement,
+            String geometryPropertyName,
+            Graphic graphic) {
         TextSymbolizer2 tSymb = new TextSymbolizerImpl(filterFactory);
         tSymb.setFill(fill);
-        tSymb.setFonts(fonts);
+        if (fonts != null) {
+            tSymb.fonts().addAll(Arrays.asList(fonts));
+        }
         tSymb.setGeometryPropertyName(geometryPropertyName);
 
         tSymb.setHalo(halo);
         tSymb.setLabel(label);
-        tSymb.setPlacement(labelPlacement);
+        tSymb.setLabelPlacement(labelPlacement);
         tSymb.setGraphic(graphic);
 
         return tSymb;
     }
-    
+
     public Extent createExtent(String name, String value) {
         Extent extent = new ExtentImpl();
         extent.setName(name);
@@ -170,7 +176,7 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     public FeatureTypeConstraint createFeatureTypeConstraint(
-        String featureTypeName, Filter filter, Extent[] extents) {
+            String featureTypeName, Filter filter, Extent[] extents) {
         FeatureTypeConstraint constraint = new FeatureTypeConstraintImpl();
         constraint.setFeatureTypeName(featureTypeName);
         constraint.setFilter(filter);
@@ -178,12 +184,13 @@ public class StyleFactoryImpl extends AbstractStyleFactory
 
         return constraint;
     }
-    
-    public LayerFeatureConstraints createLayerFeatureConstraints(FeatureTypeConstraint[] featureTypeConstraints) {
-    	LayerFeatureConstraints constraints = new LayerFeatureConstraintsImpl();
-    	constraints.setFeatureTypeConstraints(featureTypeConstraints);
-    	
-    	return constraints;
+
+    public LayerFeatureConstraints createLayerFeatureConstraints(
+            FeatureTypeConstraint[] featureTypeConstraints) {
+        LayerFeatureConstraints constraints = new LayerFeatureConstraintsImpl();
+        constraints.setFeatureTypeConstraints(featureTypeConstraints);
+
+        return constraints;
     }
 
     public FeatureTypeStyle createFeatureTypeStyle() {
@@ -193,53 +200,45 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     public FeatureTypeStyle createFeatureTypeStyle(Rule[] rules) {
         return new FeatureTypeStyleImpl(rules);
     }
-    
+
     public Rule createRule() {
         return new RuleImpl();
     }
-    
-    public Rule createRule(org.geotools.styling.Symbolizer[] symbolizers, 
-                        Description desc, 
-                        Graphic[] legends,
-                        String name,
-                        Filter filter,
-                        boolean isElseFilter,
-                        double maxScale,
-                        double minScale){
-        
-        Rule r = new RuleImpl(symbolizers, 
-                        desc, 
-                        legends,
-                        name,
-                        filter,
-                        isElseFilter,
-                        maxScale,
-                        minScale);
-                
-                
+
+    public Rule createRule(
+            org.geotools.styling.Symbolizer[] symbolizers,
+            Description desc,
+            org.opengis.style.GraphicLegend legend,
+            String name,
+            Filter filter,
+            boolean isElseFilter,
+            double maxScale,
+            double minScale) {
+
+        Rule r =
+                new RuleImpl(
+                        symbolizers, desc, legend, name, filter, isElseFilter, maxScale, minScale);
+
         return r;
     }
 
     public ImageOutline createImageOutline(Symbolizer symbolizer) {
-    	ImageOutline outline = new ImageOutlineImpl();
-    	outline.setSymbolizer(symbolizer);
-    	
-    	return outline;
+        ImageOutline outline = new ImageOutlineImpl();
+        outline.setSymbolizer(symbolizer);
+
+        return outline;
     }
-    
+
     /**
      * A method to make a simple stroke of a provided color and width.
      *
      * @param color the color of the line
      * @param width the width of the line
-     *
      * @return the stroke object
-     *
      * @see org.geotools.stroke
      */
     public Stroke createStroke(Expression color, Expression width) {
-        return createStroke(color, width,
-            filterFactory.literal(1.0));
+        return createStroke(color, width, filterFactory.literal(1.0));
     }
 
     /**
@@ -248,17 +247,20 @@ public class StyleFactoryImpl extends AbstractStyleFactory
      * @param color the color of the line
      * @param width The width of the line
      * @param opacity The opacity of the line
-     *
      * @return The stroke
-     *
      * @see org.geotools.stroke
      */
-    public Stroke createStroke(Expression color, Expression width,
-        Expression opacity) {
-        return createStroke(color, width, opacity,
-            filterFactory.literal("miter"),
-            filterFactory.literal("butt"), null,
-            filterFactory.literal(0.0), null, null);
+    public Stroke createStroke(Expression color, Expression width, Expression opacity) {
+        return createStroke(
+                color,
+                width,
+                opacity,
+                filterFactory.literal("miter"),
+                filterFactory.literal("butt"),
+                null,
+                filterFactory.literal(0.0),
+                null,
+                null);
     }
 
     /**
@@ -273,43 +275,45 @@ public class StyleFactoryImpl extends AbstractStyleFactory
      * @param dashOffset - where in the dash array to start drawing from
      * @param graphicFill - a graphic object to fill the line with
      * @param graphicStroke - a graphic object to draw the line with
-     *
      * @return The completed stroke.
-     *
-     * @throws IllegalArgumentException DOCUMENT ME!
-     *
      * @see org.geotools.stroke
      */
-    public Stroke createStroke(Expression color, Expression width,
-        Expression opacity, Expression lineJoin, Expression lineCap,
-        float[] dashArray, Expression dashOffset, Graphic graphicFill,
-        Graphic graphicStroke) {
+    public Stroke createStroke(
+            Expression color,
+            Expression width,
+            Expression opacity,
+            Expression lineJoin,
+            Expression lineCap,
+            float[] dashArray,
+            Expression dashOffset,
+            Graphic graphicFill,
+            Graphic graphicStroke) {
         Stroke stroke = new StrokeImpl(filterFactory);
 
         if (color == null) {
-        	//use default
-        	color = Stroke.DEFAULT.getColor();
+            // use default
+            color = Stroke.DEFAULT.getColor();
         }
         stroke.setColor(color);
 
         if (width == null) {
-        	//use default
-        	width = Stroke.DEFAULT.getWidth();
+            // use default
+            width = Stroke.DEFAULT.getWidth();
         }
         stroke.setWidth(width);
 
         if (opacity == null) {
-        	opacity = Stroke.DEFAULT.getOpacity();;
+            opacity = Stroke.DEFAULT.getOpacity();
         }
         stroke.setOpacity(opacity);
 
         if (lineJoin == null) {
-        	lineJoin = Stroke.DEFAULT.getLineJoin();
+            lineJoin = Stroke.DEFAULT.getLineJoin();
         }
         stroke.setLineJoin(lineJoin);
 
         if (lineCap == null) {
-        	lineCap = Stroke.DEFAULT.getLineCap();
+            lineCap = Stroke.DEFAULT.getLineCap();
         }
 
         stroke.setLineCap(lineCap);
@@ -321,24 +325,21 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return stroke;
     }
 
-    public Fill createFill(Expression color, Expression backgroundColor,
-        Expression opacity, Graphic graphicFill) {
+    public Fill createFill(
+            Expression color, Expression backgroundColor, Expression opacity, Graphic graphicFill) {
         Fill fill = new FillImpl(filterFactory);
 
         if (color == null) {
             color = Fill.DEFAULT.getColor();
         }
         fill.setColor(color);
-        if (backgroundColor == null) {
-        	backgroundColor = Fill.DEFAULT.getBackgroundColor();
-        }
-        fill.setBackgroundColor(backgroundColor);
 
         if (opacity == null) {
-        	opacity = Fill.DEFAULT.getOpacity();
+            opacity = Fill.DEFAULT.getOpacity();
         }
 
-        // would be nice to check if this was within bounds but we have to wait until use since it may depend on an attribute
+        // would be nice to check if this was within bounds but we have to wait until use since it
+        // may depend on an attribute
         fill.setOpacity(opacity);
         fill.setGraphicFill(graphicFill);
 
@@ -350,17 +351,19 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     public Fill createFill(Expression color) {
-        return createFill(color, null,
-            filterFactory.literal(1.0), null);
+        return createFill(color, null, filterFactory.literal(1.0), null);
     }
 
-    public Mark createMark(Expression wellKnownName, Stroke stroke, Fill fill,
-        Expression size, Expression rotation) {
+    public Mark createMark(
+            Expression wellKnownName,
+            Stroke stroke,
+            Fill fill,
+            Expression size,
+            Expression rotation) {
         Mark mark = new MarkImpl(filterFactory, null);
 
         if (wellKnownName == null) {
-            throw new IllegalArgumentException(
-                "WellKnownName can not be null in mark");
+            throw new IllegalArgumentException("WellKnownName can not be null in mark");
         }
 
         mark.setWellKnownName(wellKnownName);
@@ -371,10 +374,13 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     public Mark getSquareMark() {
-        Mark mark = createMark(filterFactory.literal("Square"),
-                getDefaultStroke(), getDefaultFill(),
-                filterFactory.literal(6),
-                filterFactory.literal(0));
+        Mark mark =
+                createMark(
+                        filterFactory.literal("Square"),
+                        getDefaultStroke(),
+                        getDefaultFill(),
+                        filterFactory.literal(6),
+                        filterFactory.literal(0));
 
         return mark;
     }
@@ -420,23 +426,27 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return mark;
     }
 
-    public Graphic createGraphic(ExternalGraphic[] externalGraphics,
-        Mark[] marks, Symbol[] symbols, Expression opacity, Expression size,
-        Expression rotation) {
+    public Graphic createGraphic(
+            ExternalGraphic[] externalGraphics,
+            Mark[] marks,
+            Symbol[] symbols,
+            Expression opacity,
+            Expression size,
+            Expression rotation) {
         Graphic graphic = new GraphicImpl(filterFactory);
-        
+
         symbols = symbols != null ? symbols : new Symbol[0];
-        graphic.setSymbols(symbols);
-        
-        //externalGraphics = externalGraphics != null ? externalGraphics : new ExternalGraphic[0];
-        //graphic.setExternalGraphics(externalGraphics);        
-        if( externalGraphics != null ){
-            graphic.graphicalSymbols().addAll( Arrays.asList( externalGraphics ) );
-        }        
+        graphic.graphicalSymbols().addAll(Arrays.asList(symbols));
+
+        // externalGraphics = externalGraphics != null ? externalGraphics : new ExternalGraphic[0];
+        // graphic.setExternalGraphics(externalGraphics);
+        if (externalGraphics != null) {
+            graphic.graphicalSymbols().addAll(Arrays.asList(externalGraphics));
+        }
         // marks = marks != null ? marks : new Mark[0];
         // graphic.setMarks(marks);
-        if( marks != null ){
-            graphic.graphicalSymbols().addAll( Arrays.asList( marks ) );
+        if (marks != null) {
+            graphic.graphicalSymbols().addAll(Arrays.asList(marks));
         }
         if (opacity == null) {
             opacity = Graphic.DEFAULT.getOpacity();
@@ -481,32 +491,35 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return extg;
     }
 
-    public Font createFont(Expression fontFamily, Expression fontStyle,
-        Expression fontWeight, Expression fontSize) {
+    public Font createFont(
+            Expression fontFamily,
+            Expression fontStyle,
+            Expression fontWeight,
+            Expression fontSize) {
         Font font = new FontImpl();
 
         if (fontFamily == null) {
-    		throw new IllegalArgumentException("Null font family specified");	
+            throw new IllegalArgumentException("Null font family specified");
         }
-        font.setFontFamily(fontFamily);
+        font.getFamily().add(fontFamily);
 
         if (fontSize == null) {
             throw new IllegalArgumentException("Null font size specified");
         }
 
-        font.setFontSize(fontSize);
+        font.setSize(fontSize);
 
         if (fontStyle == null) {
             throw new IllegalArgumentException("Null font Style specified");
         }
 
-        font.setFontStyle(fontStyle);
+        font.setStyle(fontStyle);
 
         if (fontWeight == null) {
             throw new IllegalArgumentException("Null font weight specified");
         }
 
-        font.setFontWeight(fontWeight);
+        font.setWeight(fontWeight);
 
         return font;
     }
@@ -524,8 +537,8 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     //    public PointPlacement createPointPlacement(){
     //        return new PointPlacementImpl();
     //    }
-    public PointPlacement createPointPlacement(AnchorPoint anchorPoint,
-        Displacement displacement, Expression rotation) {
+    public PointPlacement createPointPlacement(
+            AnchorPoint anchorPoint, Displacement displacement, Expression rotation) {
         PointPlacement pointp = new PointPlacementImpl(filterFactory);
         pointp.setAnchorPoint(anchorPoint);
         pointp.setDisplacement(displacement);
@@ -563,9 +576,7 @@ public class StyleFactoryImpl extends AbstractStyleFactory
 
         try {
             fill.setColor(filterFactory.literal("#808080"));
-            fill.setOpacity(filterFactory.literal(
-                    new Double(1.0)));
-            fill.setBackgroundColor(filterFactory.literal("#FFFFFF"));
+            fill.setOpacity(filterFactory.literal(Double.valueOf(1.0)));
         } catch (org.geotools.filter.IllegalFilterException ife) {
             throw new RuntimeException("Error creating fill", ife);
         }
@@ -586,25 +597,25 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     public PolygonSymbolizer getDefaultPolygonSymbolizer() {
-        return createPolygonSymbolizer(getDefaultStroke(), getDefaultFill(),
-            null);
+        return createPolygonSymbolizer(getDefaultStroke(), getDefaultFill(), null);
     }
 
     public Stroke getDefaultStroke() {
         try {
-            Stroke stroke = createStroke(filterFactory.literal("#000000"),
-                    filterFactory.literal(new Integer(1)));
+            Stroke stroke =
+                    createStroke(
+                            filterFactory.literal("#000000"),
+                            filterFactory.literal(Integer.valueOf(1)));
 
-            stroke.setDashOffset(filterFactory.literal(
-                    new Integer(0)));
+            stroke.setDashOffset(filterFactory.literal(Integer.valueOf(0)));
             stroke.setDashArray(Stroke.DEFAULT.getDashArray());
             stroke.setLineCap(filterFactory.literal("butt"));
             stroke.setLineJoin(filterFactory.literal("miter"));
-            stroke.setOpacity(filterFactory.literal(new Integer(1)));
+            stroke.setOpacity(filterFactory.literal(Integer.valueOf(1)));
 
             return stroke;
         } catch (org.geotools.filter.IllegalFilterException ife) {
-            //we should never be in here
+            // we should never be in here
             throw new RuntimeException("Error creating stroke", ife);
         }
     }
@@ -616,33 +627,36 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     /**
-     * Creates a default Text Symbolizer, using the defaultFill, defaultFont
-     * and defaultPointPlacement,  Sets the geometry attribute name to be
-     * geometry:text. No Halo is set. <b>The label is not set</b>
+     * Creates a default Text Symbolizer, using the defaultFill, defaultFont and
+     * defaultPointPlacement, Sets the geometry attribute name to be geometry:text. No Halo is set.
+     * <b>The label is not set</b>
      *
      * @return A default TextSymbolizer
      */
     public TextSymbolizer getDefaultTextSymbolizer() {
-        return createTextSymbolizer(getDefaultFill(),
-            new Font[] { getDefaultFont() }, null, null,
-            getDefaultPointPlacement(), "geometry:text");
+        return createTextSymbolizer(
+                getDefaultFill(),
+                new Font[] {getDefaultFont()},
+                null,
+                null,
+                getDefaultPointPlacement(),
+                "geometry:text");
     }
 
     /**
-     * Creates a defaultFont which is valid on all machines. The font is of
-     * size 10, Style and Weight normal and uses a serif font.
+     * Creates a defaultFont which is valid on all machines. The font is of size 10, Style and
+     * Weight normal and uses a serif font.
      *
      * @return the default Font
-     *
-     * @throws RuntimeException DOCUMENT ME!
      */
     public Font getDefaultFont() {
-        return FontImpl.createDefault( filterFactory );
+        return FontImpl.createDefault(filterFactory);
     }
 
     public Graphic createDefaultGraphic() {
         Graphic graphic = new GraphicImpl(filterFactory);
-        graphic.addMark( createMark() ); // a default graphic is assumed to have a single Mark
+        graphic.graphicalSymbols()
+                .add(createMark()); // a default graphic is assumed to have a single Mark
         graphic.setSize(Expression.NIL);
         graphic.setOpacity(filterFactory.literal(1.0));
         graphic.setRotation(filterFactory.literal(0.0));
@@ -655,29 +669,31 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     /**
-     * returns a default PointPlacement with a 0,0 anchorPoint and a
-     * displacement of 0,0 and a rotation of 0
+     * returns a default PointPlacement with a 0,0 anchorPoint and a displacement of 0,0 and a
+     * rotation of 0
      *
      * @return a default PointPlacement.
      */
     public PointPlacement getDefaultPointPlacement() {
-        return this.createPointPlacement(this.createAnchorPoint(
-                filterFactory.literal(0),
-                filterFactory.literal(0.5)),
-            this.createDisplacement(filterFactory.literal(0),
-                filterFactory.literal(0)),
-            filterFactory.literal(0));
+        return this.createPointPlacement(
+                PointPlacement.DEFAULT_ANCHOR_POINT,
+                this.createDisplacement(filterFactory.literal(0), filterFactory.literal(0)),
+                filterFactory.literal(0));
     }
 
     public RasterSymbolizer createRasterSymbolizer() {
-    	return new RasterSymbolizerImpl(filterFactory);
+        return new RasterSymbolizerImpl(filterFactory);
     }
-    
+
     public RasterSymbolizer createRasterSymbolizer(
-        String geometryPropertyName, Expression opacity,
-        ChannelSelection channel, Expression overlap, ColorMap colorMap,
-        ContrastEnhancement cenhancement, ShadedRelief relief,
-        Symbolizer outline) {
+            String geometryPropertyName,
+            Expression opacity,
+            ChannelSelection channel,
+            Expression overlap,
+            ColorMap colorMap,
+            ContrastEnhancement cenhancement,
+            ShadedRelief relief,
+            Symbolizer outline) {
         RasterSymbolizer rastersym = new RasterSymbolizerImpl(filterFactory);
 
         if (geometryPropertyName != null) {
@@ -716,17 +732,19 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     }
 
     public RasterSymbolizer getDefaultRasterSymbolizer() {
-        return createRasterSymbolizer(null,
-            filterFactory.literal(1.0), null, null, null, null,
-            null, null);
+        return createRasterSymbolizer(
+                null, filterFactory.literal(1.0), null, null, null, null, null, null);
     }
 
-    public ChannelSelection createChannelSelection(
-        SelectedChannelType[] channels) {
+    public ChannelSelection createChannelSelection(SelectedChannelType[] channels) {
         ChannelSelection channelSel = new ChannelSelectionImpl();
 
         if ((channels != null) && (channels.length > 0)) {
-            channelSel.setSelectedChannels(channels);
+            if (channels.length == 1) {
+                channelSel.setGrayChannel(channels[0]);
+            } else {
+                channelSel.setRGBChannels(channels);
+            }
         }
 
         return channelSel;
@@ -751,8 +769,8 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return ce;
     }
 
-    public SelectedChannelType createSelectedChannelType(String name,
-        ContrastEnhancement enhancement) {
+    public SelectedChannelType createSelectedChannelType(
+            Expression name, ContrastEnhancement enhancement) {
         SelectedChannelType sct = new SelectedChannelTypeImpl(filterFactory);
         sct.setChannelName(name);
         sct.setContrastEnhancement(enhancement);
@@ -760,8 +778,13 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return sct;
     }
 
-    public SelectedChannelType createSelectedChannelType(String name,
-        Expression gammaValue) {
+    public SelectedChannelType createSelectedChannelType(
+            String name, ContrastEnhancement enhancement) {
+        Expression nameExp = filterFactory.literal(name);
+        return createSelectedChannelType(nameExp, enhancement);
+    }
+
+    public SelectedChannelType createSelectedChannelType(Expression name, Expression gammaValue) {
         SelectedChannelType sct = new SelectedChannelTypeImpl(filterFactory);
         sct.setChannelName(name);
         sct.setContrastEnhancement(createContrastEnhancement(gammaValue));
@@ -780,19 +803,20 @@ public class StyleFactoryImpl extends AbstractStyleFactory
     public NamedLayer createNamedLayer() {
         return new NamedLayerImpl();
     }
-    
+
     public RemoteOWS createRemoteOWS(String service, String onlineResource) {
-    	RemoteOWSImpl remoteOWS = new RemoteOWSImpl();
-    	remoteOWS.setService(service);
-    	remoteOWS.setOnlineResource(onlineResource);
-    	
-    	return remoteOWS;
-    }    
+        RemoteOWSImpl remoteOWS = new RemoteOWSImpl();
+        remoteOWS.setService(service);
+        remoteOWS.setOnlineResource(onlineResource);
+
+        return remoteOWS;
+    }
+
     public ShadedRelief createShadedRelief(Expression reliefFactor) {
-    	ShadedRelief relief = new ShadedReliefImpl(filterFactory);
-    	relief.setReliefFactor(reliefFactor);
-    	
-    	return relief;
+        ShadedRelief relief = new ShadedReliefImpl(filterFactory);
+        relief.setReliefFactor(reliefFactor);
+
+        return relief;
     }
     //
     // Start of GeoAPI StyleFacstory implementation
@@ -802,12 +826,13 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return delegate.anchorPoint(x, y);
     }
 
-    public ChannelSelection channelSelection(
-            org.opengis.style.SelectedChannelType gray) {
+    public ChannelSelection channelSelection(org.opengis.style.SelectedChannelType gray) {
         return delegate.channelSelection(gray);
     }
+
     public ChannelSelection channelSelection(
-            org.opengis.style.SelectedChannelType red, org.opengis.style.SelectedChannelType green,
+            org.opengis.style.SelectedChannelType red,
+            org.opengis.style.SelectedChannelType green,
             org.opengis.style.SelectedChannelType blue) {
         return delegate.channelSelection(red, green, blue);
     }
@@ -820,12 +845,12 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return delegate.colorReplacement(propertyName, mapping);
     }
 
-    public ContrastEnhancement contrastEnhancement(Expression gamma,
-            ContrastMethod method) {
+    public ContrastEnhancement contrastEnhancement(Expression gamma, ContrastMethod method) {
         return delegate.contrastEnhancement(gamma, method);
     }
 
-    public org.geotools.styling.Description description(InternationalString title, InternationalString description) {
+    public org.geotools.styling.Description description(
+            InternationalString title, InternationalString description) {
         return delegate.description(title, description);
     }
 
@@ -833,13 +858,12 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return delegate.displacement(dx, dy);
     }
 
-    public ExternalGraphic externalGraphic(Icon inline,
-            Collection<ColorReplacement> replacements) {
+    public ExternalGraphic externalGraphic(Icon inline, Collection<ColorReplacement> replacements) {
         return delegate.externalGraphic(inline, replacements);
     }
 
-    public ExternalGraphic externalGraphic(OnLineResource resource,
-            String format, Collection<ColorReplacement> replacements) {
+    public ExternalGraphic externalGraphic(
+            OnLineResource resource, String format, Collection<ColorReplacement> replacements) {
         return delegate.externalGraphic(resource, format, replacements);
     }
 
@@ -851,137 +875,275 @@ public class StyleFactoryImpl extends AbstractStyleFactory
         return delegate.externalMark(resource, format, markIndex);
     }
 
-    public FeatureTypeStyle featureTypeStyle(String name,
-            Description description, Id definedFor, Set<Name> featureTypeNames,
-            Set<SemanticType> types, List<org.opengis.style.Rule> rules) {
-        return delegate.featureTypeStyle(name, description, definedFor, featureTypeNames, types, rules);
+    public FeatureTypeStyle featureTypeStyle(
+            String name,
+            Description description,
+            Id definedFor,
+            Set<Name> featureTypeNames,
+            Set<SemanticType> types,
+            List<org.opengis.style.Rule> rules) {
+        return delegate.featureTypeStyle(
+                name, description, definedFor, featureTypeNames, types, rules);
     }
 
     public Fill fill(GraphicFill fill, Expression color, Expression opacity) {
         return delegate.fill(fill, color, opacity);
     }
 
-    public Font font(List<Expression> family, Expression style,
-            Expression weight, Expression size) {
+    public Font font(
+            List<Expression> family, Expression style, Expression weight, Expression size) {
         return delegate.font(family, style, weight, size);
     }
 
-    public Graphic graphic(List<GraphicalSymbol> symbols, Expression opacity,
-            Expression size, Expression rotation, org.opengis.style.AnchorPoint anchor,
+    public Graphic graphic(
+            List<GraphicalSymbol> symbols,
+            Expression opacity,
+            Expression size,
+            Expression rotation,
+            org.opengis.style.AnchorPoint anchor,
             org.opengis.style.Displacement disp) {
         return delegate.graphic(symbols, opacity, size, rotation, anchor, disp);
     }
-    public Graphic graphicFill(List<GraphicalSymbol> symbols, Expression opacity,
-            Expression size, Expression rotation, org.opengis.style.AnchorPoint anchorPoint,
+
+    public Graphic graphicFill(
+            List<GraphicalSymbol> symbols,
+            Expression opacity,
+            Expression size,
+            Expression rotation,
+            org.opengis.style.AnchorPoint anchorPoint,
             org.opengis.style.Displacement displacement) {
         return delegate.graphicFill(symbols, opacity, size, rotation, anchorPoint, displacement);
     }
-    public GraphicLegend graphicLegend(List<GraphicalSymbol> symbols, Expression opacity,
-            Expression size, Expression rotation, org.opengis.style.AnchorPoint anchorPoint,
+
+    public GraphicLegend graphicLegend(
+            List<GraphicalSymbol> symbols,
+            Expression opacity,
+            Expression size,
+            Expression rotation,
+            org.opengis.style.AnchorPoint anchorPoint,
             org.opengis.style.Displacement displacement) {
         return delegate.graphicLegend(symbols, opacity, size, rotation, anchorPoint, displacement);
     }
-    public Graphic graphicStroke(List<GraphicalSymbol> symbols, Expression opacity,
-            Expression size, Expression rotation, org.opengis.style.AnchorPoint anchorPoint,
-            org.opengis.style.Displacement displacement, Expression initialGap, Expression gap) {
-        return delegate.graphicStroke(symbols, opacity, size, rotation, anchorPoint, displacement, initialGap, gap);
+
+    public Graphic graphicStroke(
+            List<GraphicalSymbol> symbols,
+            Expression opacity,
+            Expression size,
+            Expression rotation,
+            org.opengis.style.AnchorPoint anchorPoint,
+            org.opengis.style.Displacement displacement,
+            Expression initialGap,
+            Expression gap) {
+        return delegate.graphicStroke(
+                symbols, opacity, size, rotation, anchorPoint, displacement, initialGap, gap);
     }
-    public Halo halo(org.opengis.style.Fill fill, Expression radius) {        
+
+    public Halo halo(org.opengis.style.Fill fill, Expression radius) {
         return delegate.halo(fill, radius);
     }
 
-    public LinePlacement linePlacement(Expression offset, Expression initialGap,
-            Expression gap, boolean repeated, boolean aligned, boolean generalizedLine) {
+    public LinePlacement linePlacement(
+            Expression offset,
+            Expression initialGap,
+            Expression gap,
+            boolean repeated,
+            boolean aligned,
+            boolean generalizedLine) {
         return delegate.linePlacement(offset, initialGap, gap, repeated, aligned, generalizedLine);
     }
 
-    public LineSymbolizer lineSymbolizer(String name, Expression geometry,
-            Description description, Unit<?> unit, org.opengis.style.Stroke stroke,
+    public LineSymbolizer lineSymbolizer(
+            String name,
+            Expression geometry,
+            Description description,
+            Unit<?> unit,
+            org.opengis.style.Stroke stroke,
             Expression offset) {
         return delegate.lineSymbolizer(name, geometry, description, unit, stroke, offset);
     }
-    public Mark mark(Expression wellKnownName, org.opengis.style.Fill fill,
+
+    public Mark mark(
+            Expression wellKnownName,
+            org.opengis.style.Fill fill,
             org.opengis.style.Stroke stroke) {
         return delegate.mark(wellKnownName, fill, stroke);
     }
 
-    public MarkImpl mark(org.opengis.style.ExternalMark externalMark, org.opengis.style.Fill fill,
+    public MarkImpl mark(
+            org.opengis.style.ExternalMark externalMark,
+            org.opengis.style.Fill fill,
             org.opengis.style.Stroke stroke) {
         return delegate.mark(externalMark, fill, stroke);
     }
 
-    public PointPlacement pointPlacement(org.opengis.style.AnchorPoint anchor,
-            org.opengis.style.Displacement displacement, Expression rotation) {
+    public PointPlacement pointPlacement(
+            org.opengis.style.AnchorPoint anchor,
+            org.opengis.style.Displacement displacement,
+            Expression rotation) {
         return delegate.pointPlacement(anchor, displacement, rotation);
     }
 
-    public PointSymbolizer pointSymbolizer(String name, Expression geometry,
-            Description description, Unit<?> unit, org.opengis.style.Graphic graphic) {
+    public PointSymbolizer pointSymbolizer(
+            String name,
+            Expression geometry,
+            Description description,
+            Unit<?> unit,
+            org.opengis.style.Graphic graphic) {
         return delegate.pointSymbolizer(name, geometry, description, unit, graphic);
     }
-    public PolygonSymbolizer polygonSymbolizer(String name, Expression geometry,
-            Description description, Unit<?> unit, org.opengis.style.Stroke stroke,
-            org.opengis.style.Fill fill, org.opengis.style.Displacement displacement,
+
+    public PolygonSymbolizer polygonSymbolizer(
+            String name,
+            Expression geometry,
+            Description description,
+            Unit<?> unit,
+            org.opengis.style.Stroke stroke,
+            org.opengis.style.Fill fill,
+            org.opengis.style.Displacement displacement,
             Expression offset) {
-        return delegate.polygonSymbolizer(name, geometry, description, unit, stroke, fill, displacement, offset);
+        return delegate.polygonSymbolizer(
+                name, geometry, description, unit, stroke, fill, displacement, offset);
     }
-    
-    public RasterSymbolizer rasterSymbolizer(String name, Expression geometry,
-            Description description, Unit<?> unit, Expression opacity,
-            org.opengis.style.ChannelSelection channelSelection, OverlapBehavior overlapsBehaviour,
-            org.opengis.style.ColorMap colorMap, org.opengis.style.ContrastEnhancement contrast,
-            org.opengis.style.ShadedRelief shaded, org.opengis.style.Symbolizer outline) {
-        return delegate.rasterSymbolizer(name, geometry, description, unit, opacity, channelSelection, overlapsBehaviour, colorMap, contrast, shaded, outline);
+
+    public RasterSymbolizer rasterSymbolizer(
+            String name,
+            Expression geometry,
+            Description description,
+            Unit<?> unit,
+            Expression opacity,
+            org.opengis.style.ChannelSelection channelSelection,
+            OverlapBehavior overlapsBehaviour,
+            org.opengis.style.ColorMap colorMap,
+            org.opengis.style.ContrastEnhancement contrast,
+            org.opengis.style.ShadedRelief shaded,
+            org.opengis.style.Symbolizer outline) {
+        return delegate.rasterSymbolizer(
+                name,
+                geometry,
+                description,
+                unit,
+                opacity,
+                channelSelection,
+                overlapsBehaviour,
+                colorMap,
+                contrast,
+                shaded,
+                outline);
     }
-    
-    public ExtensionSymbolizer extensionSymbolizer(String name, String propertyName,
-            Description description, Unit<?> unit, String extensionName,
+
+    public ExtensionSymbolizer extensionSymbolizer(
+            String name,
+            String propertyName,
+            Description description,
+            Unit<?> unit,
+            String extensionName,
             Map<String, Expression> parameters) {
-        return delegate.extensionSymbolizer(name, propertyName, description, unit, extensionName, parameters);
-    }    
-  
-    public Rule rule(String name, Description description, org.opengis.style.GraphicLegend legend,
-            double min, double max, List<org.opengis.style.Symbolizer> symbolizers, Filter filter) {
+        return delegate.extensionSymbolizer(
+                name, propertyName, description, unit, extensionName, parameters);
+    }
+
+    public Rule rule(
+            String name,
+            Description description,
+            org.opengis.style.GraphicLegend legend,
+            double min,
+            double max,
+            List<org.opengis.style.Symbolizer> symbolizers,
+            Filter filter) {
         return delegate.rule(name, description, legend, min, max, symbolizers, filter);
     }
-    
-    public SelectedChannelType selectedChannelType(String channelName,
-            org.opengis.style.ContrastEnhancement contrastEnhancement)
-    {
+
+    public SelectedChannelType selectedChannelType(
+            Expression channelName, org.opengis.style.ContrastEnhancement contrastEnhancement) {
         return delegate.selectedChannelType(channelName, contrastEnhancement);
     }
-    
-    public ShadedRelief shadedRelief(Expression reliefFactor,
-            boolean brightnessOnly) {
+
+    public SelectedChannelType selectedChannelType(
+            String channelName, org.opengis.style.ContrastEnhancement contrastEnhancement) {
+        return delegate.selectedChannelType(channelName, contrastEnhancement);
+    }
+
+    public ShadedRelief shadedRelief(Expression reliefFactor, boolean brightnessOnly) {
         return delegate.shadedRelief(reliefFactor, brightnessOnly);
     }
 
-    public Stroke stroke(Expression color, Expression opacity, Expression width,
-            Expression join, Expression cap, float[] dashes, Expression offset) {
+    public Stroke stroke(
+            Expression color,
+            Expression opacity,
+            Expression width,
+            Expression join,
+            Expression cap,
+            float[] dashes,
+            Expression offset) {
         return delegate.stroke(color, opacity, width, join, cap, dashes, offset);
     }
-    
-    public Stroke stroke(GraphicFill fill, Expression color, Expression opacity,
-            Expression width, Expression join, Expression cap, float[] dashes, Expression offset) {
+
+    public Stroke stroke(
+            GraphicFill fill,
+            Expression color,
+            Expression opacity,
+            Expression width,
+            Expression join,
+            Expression cap,
+            float[] dashes,
+            Expression offset) {
         return delegate.stroke(fill, color, opacity, width, join, cap, dashes, offset);
     }
-    
-    public Stroke stroke(GraphicStroke stroke, Expression color,
-            Expression opacity, Expression width, Expression join, Expression cap, float[] dashes,
+
+    public Stroke stroke(
+            GraphicStroke stroke,
+            Expression color,
+            Expression opacity,
+            Expression width,
+            Expression join,
+            Expression cap,
+            float[] dashes,
             Expression offset) {
         return delegate.stroke(stroke, color, opacity, width, join, cap, dashes, offset);
     }
-    
-    public Style style(String name, Description description, boolean isDefault,
+
+    public Style style(
+            String name,
+            Description description,
+            boolean isDefault,
             List<org.opengis.style.FeatureTypeStyle> featureTypeStyles,
             org.opengis.style.Symbolizer defaultSymbolizer) {
         return delegate.style(name, description, isDefault, featureTypeStyles, defaultSymbolizer);
     }
-    
-    public TextSymbolizer textSymbolizer(String name, Expression geometry,
-            Description description, Unit<?> unit, Expression label, org.opengis.style.Font font,
-            org.opengis.style.LabelPlacement placement, org.opengis.style.Halo halo,
+
+    public TextSymbolizer textSymbolizer(
+            String name,
+            Expression geometry,
+            Description description,
+            Unit<?> unit,
+            Expression label,
+            org.opengis.style.Font font,
+            org.opengis.style.LabelPlacement placement,
+            org.opengis.style.Halo halo,
             org.opengis.style.Fill fill) {
-        return delegate.textSymbolizer(name, geometry, description, unit, label, font, placement, halo, fill);        
+        return delegate.textSymbolizer(
+                name, geometry, description, unit, label, font, placement, halo, fill);
+    }
+
+    @Override
+    public org.opengis.style.ContrastEnhancement contrastEnhancement(
+            Expression gamma, String method) {
+
+        ContrastMethod meth = ContrastMethod.NONE;
+        if (ContrastMethod.NORMALIZE.matches(method)) {
+            meth = ContrastMethod.NORMALIZE;
+        } else if (ContrastMethod.HISTOGRAM.matches(method)) {
+            meth = ContrastMethod.HISTOGRAM;
+        } else if (ContrastMethod.LOGARITHMIC.matches(method)) {
+            meth = ContrastMethod.LOGARITHMIC;
+        } else if (ContrastMethod.EXPONENTIAL.matches(method)) {
+            meth = ContrastMethod.EXPONENTIAL;
+        }
+        return new ContrastEnhancementImpl(filterFactory, gamma, meth);
+    }
+
+    @Override
+    public ContrastMethod createContrastMethod(ContrastMethod method) {
+        return method;
     }
 }
