@@ -1,6 +1,25 @@
+/*
+ *    GeoTools - The Open Source Java GIS Toolkit
+ *    http://geotools.org
+ *
+ *    (C) 2019, Open Source Geospatial Foundation (OSGeo)
+ *
+ *    This library is free software; you can redistribute it and/or
+ *    modify it under the terms of the GNU Lesser General Public
+ *    License as published by the Free Software Foundation;
+ *    version 2.1 of the License.
+ *
+ *    This library is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ *    Lesser General Public License for more details.
+ */
 package org.geotools.data.shapefile;
 
-import static org.geotools.data.shapefile.files.ShpFileType.*;
+import static org.geotools.data.shapefile.files.ShpFileType.FIX;
+import static org.geotools.data.shapefile.files.ShpFileType.QIX;
+import static org.geotools.data.shapefile.files.ShpFileType.SHP;
+import static org.geotools.data.shapefile.files.ShpFileType.SHX;
 
 import java.io.File;
 import java.io.IOException;
@@ -11,16 +30,14 @@ import java.util.List;
 import java.util.TreeSet;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
+import org.geotools.data.CloseableIterator;
 import org.geotools.data.DataSourceException;
-import org.geotools.data.DataUtilities;
 import org.geotools.data.shapefile.fid.FidIndexer;
 import org.geotools.data.shapefile.fid.IndexedFidReader;
 import org.geotools.data.shapefile.files.FileWriter;
 import org.geotools.data.shapefile.files.ShpFileType;
 import org.geotools.data.shapefile.files.ShpFiles;
 import org.geotools.data.shapefile.index.CachedQuadTree;
-import org.geotools.data.shapefile.index.CloseableIterator;
 import org.geotools.data.shapefile.index.Data;
 import org.geotools.data.shapefile.index.DataDefinition;
 import org.geotools.data.shapefile.index.TreeException;
@@ -28,16 +45,16 @@ import org.geotools.data.shapefile.index.quadtree.QuadTree;
 import org.geotools.data.shapefile.index.quadtree.StoreException;
 import org.geotools.data.shapefile.index.quadtree.fs.FileSystemIndexStore;
 import org.geotools.data.shapefile.shp.IndexFile;
-import org.geotools.util.NullProgressListener;
+import org.geotools.data.util.NullProgressListener;
+import org.geotools.util.URLs;
 import org.geotools.util.logging.Logging;
+import org.locationtech.jts.geom.Envelope;
 import org.opengis.filter.Id;
 import org.opengis.filter.identity.Identifier;
 
-import com.vividsolutions.jts.geom.Envelope;
-
 /**
  * Manages the index files on behalf of the the {@link ShapefileDataStore}
- * 
+ *
  * @author Andrea Aime - GeoSolutions
  */
 class IndexManager {
@@ -53,17 +70,16 @@ class IndexManager {
     CachedQuadTree cachedTree;
 
     ShapefileDataStore store;
-    
-    /**
-     * Used to lock the files when doing accesses to check indexes and the like
-     */
-    FileWriter writer = new FileWriter() {
 
-        @Override
-        public String id() {
-            return "ShapefileDataStore-" + store.getTypeName().getLocalPart();
-        }
-    };
+    /** Used to lock the files when doing accesses to check indexes and the like */
+    FileWriter writer =
+            new FileWriter() {
+
+                @Override
+                public String id() {
+                    return "ShapefileDataStore-" + store.getTypeName().getLocalPart();
+                }
+            };
 
     static {
         int max = -1;
@@ -85,7 +101,7 @@ class IndexManager {
 
     /**
      * Creates the spatial index is appropriate.
-     * 
+     *
      * @param force Forces the index re-creation even if the spatial index seems to be up to date
      * @return true if the spatial index has been created/updated
      */
@@ -93,8 +109,8 @@ class IndexManager {
         // create index as needed
         try {
             if (shpFiles.isLocal() && (isIndexStale(QIX) || force)) {
-                ShapefileDataStoreFactory.LOGGER.fine("Creating spatial index for "
-                        + shpFiles.get(SHP));
+                ShapefileDataStoreFactory.LOGGER.fine(
+                        "Creating spatial index for " + shpFiles.get(SHP));
 
                 ShapeFileIndexer indexer = new ShapeFileIndexer();
                 indexer.setShapeFileName(shpFiles);
@@ -108,11 +124,7 @@ class IndexManager {
         return false;
     }
 
-    /**
-     * If the fid index can be used and it is missing this method will try to create it
-     * 
-     * @return
-     */
+    /** If the fid index can be used and it is missing this method will try to create it */
     boolean hasFidIndex(boolean createIfMissing) {
         if (isIndexUseable(FIX)) {
             return true;
@@ -122,7 +134,6 @@ class IndexManager {
             } else {
                 return false;
             }
-
         }
     }
 
@@ -136,12 +147,7 @@ class IndexManager {
         }
     }
 
-    /**
-     * Returns true if the specified index exists, is up to date, and can be read
-     * 
-     * @param indexType
-     * @return
-     */
+    /** Returns true if the specified index exists, is up to date, and can be read */
     boolean isIndexUseable(ShpFileType indexType) {
         if (shpFiles.isLocal()) {
             if (isIndexStale(indexType) || !shpFiles.exists(indexType)) {
@@ -159,8 +165,8 @@ class IndexManager {
                     try {
                         read.close();
                     } catch (IOException e) {
-                        ShapefileDataStoreFactory.LOGGER.log(Level.WARNING,
-                                "could not close stream", e);
+                        ShapefileDataStoreFactory.LOGGER.log(
+                                Level.WARNING, "could not close stream", e);
                     }
                 }
             }
@@ -168,13 +174,8 @@ class IndexManager {
 
         return true;
     }
-    
-    /**
-     * Returns true if the index file is available
-     * 
-     * @param indexType
-     * @return
-     */
+
+    /** Returns true if the index file is available */
     boolean isSpatialIndexAvailable() {
         return shpFiles.isLocal() && shpFiles.exists(QIX);
     }
@@ -182,17 +183,14 @@ class IndexManager {
     /**
      * Returns true if the specified index file is outdated compared to the shapefile .shp and .shx
      * files
-     * 
-     * @param indexType
-     * @return
      */
     boolean isIndexStale(ShpFileType indexType) {
         if (!shpFiles.isLocal())
             throw new IllegalStateException(
                     "This method only applies if the files are local and the file can be created");
 
-        URL indexURL = shpFiles.acquireRead(indexType, writer);
         URL shpURL = shpFiles.acquireRead(SHP, writer);
+        URL indexURL = shpFiles.acquireRead(indexType, writer);
         try {
 
             if (indexURL == null) {
@@ -205,8 +203,8 @@ class IndexManager {
                 return false;
             }
 
-            File indexFile = DataUtilities.urlToFile(indexURL);
-            File shpFile = DataUtilities.urlToFile(shpURL);
+            File indexFile = URLs.urlToFile(indexURL);
+            File shpFile = URLs.urlToFile(shpURL);
             long indexLastModified = indexFile.lastModified();
             long shpLastModified = shpFile.lastModified();
             boolean shpChangedMoreRecently = indexLastModified < shpLastModified;
@@ -224,20 +222,20 @@ class IndexManager {
     /**
      * Uses the Fid index to quickly lookup the shp offset and the record number for the list of
      * fids
-     * 
-     * @param fids the fid filter identifying the ids
+     *
+     * @param fidFilter the fid filter identifying the ids
      * @return a list of Data objects
-     * @throws IOException
-     * @throws TreeException
      */
     List<Data> queryFidIndex(Id fidFilter) throws IOException {
         // sort by fid to increase performance and allow skipping on natural order
-        TreeSet<Identifier> idsSet = new TreeSet<Identifier>(new IdentifierComparator(store.getTypeName().getLocalPart()));
+        TreeSet<Identifier> idsSet =
+                new TreeSet<Identifier>(
+                        new IdentifierComparator(store.getTypeName().getLocalPart()));
         idsSet.addAll(fidFilter.getIdentifiers());
 
         IndexedFidReader reader = new IndexedFidReader(shpFiles);
 
-        List<Data> records = new ArrayList(idsSet.size());
+        List<Data> records = new ArrayList<>(idsSet.size());
         try {
             IndexFile shx = store.shpManager.openIndexFile();
             try {
@@ -250,18 +248,25 @@ class IndexManager {
                     long recno = reader.findFid(fid);
                     if (recno == -1) {
                         if (LOGGER.isLoggable(Level.FINEST)) {
-                            LOGGER.finest("fid " + fid
-                                    + " not found in index, continuing with next queried fid...");
+                            LOGGER.finest(
+                                    "fid "
+                                            + fid
+                                            + " not found in index, continuing with next queried fid...");
                         }
                         continue;
                     }
                     try {
                         Data data = new Data(def);
-                        data.addValue(new Integer((int) recno + 1));
-                        data.addValue(new Long(shx.getOffsetInBytes((int) recno)));
+                        data.addValue(Integer.valueOf((int) recno + 1));
+                        data.addValue(Long.valueOf(shx.getOffsetInBytes((int) recno)));
                         if (LOGGER.isLoggable(Level.FINEST)) {
-                            LOGGER.finest("fid " + fid + " found for record #" + data.getValue(0)
-                                    + " at index file offset " + data.getValue(1));
+                            LOGGER.finest(
+                                    "fid "
+                                            + fid
+                                            + " found for record #"
+                                            + data.getValue(0)
+                                            + " at index file offset "
+                                            + data.getValue(1));
                         }
                         records.add(data);
                     } catch (Exception e) {
@@ -280,18 +285,9 @@ class IndexManager {
         return records;
     }
 
-    /**
-     * Queries the spatial index for features available in the specified bbox
-     * 
-     * @param bbox
-     * 
-     * 
-     * @throws DataSourceException
-     * @throws IOException
-     * @throws TreeException DOCUMENT ME!
-     */
-    protected CloseableIterator<Data> querySpatialIndex(Envelope bbox) throws DataSourceException,
-            IOException, TreeException {
+    /** Queries the spatial index for features available in the specified bbox */
+    protected CloseableIterator<Data> querySpatialIndex(Envelope bbox)
+            throws DataSourceException, IOException, TreeException {
         CloseableIterator<Data> tmp = null;
 
         // check if the spatial index needs recreating
@@ -301,9 +297,11 @@ class IndexManager {
             boolean canCache = false;
             URL treeURL = shpFiles.acquireRead(QIX, writer);
             try {
-                File treeFile = DataUtilities.urlToFile(treeURL);
+                File treeFile = URLs.urlToFile(treeURL);
 
-                if (treeFile != null && treeFile.exists() && treeFile.length() < 1024 * maxQixCacheSize) {
+                if (treeFile != null
+                        && treeFile.exists()
+                        && treeFile.length() < 1024 * maxQixCacheSize) {
                     canCache = true;
                 }
             } finally {
@@ -311,12 +309,14 @@ class IndexManager {
             }
 
             if (canCache) {
-                QuadTree quadTree = openQuadTree();
-                if (quadTree != null) {
-                    LOGGER.warning("Experimental: loading in memory the quadtree for "
-                            + shpFiles.get(SHP));
-                    cachedTree = new CachedQuadTree(quadTree);
-                    quadTree.close();
+                try (QuadTree quadTree = openQuadTree()) {
+                    if (quadTree != null) {
+                        LOGGER.warning(
+                                "Experimental: loading in memory the quadtree for "
+                                        + shpFiles.get(SHP));
+                        cachedTree = new CachedQuadTree(quadTree);
+                        quadTree.close();
+                    }
                 }
             }
         }
@@ -328,6 +328,7 @@ class IndexManager {
             }
         } else {
             try {
+                @SuppressWarnings("PMD.CloseResource") // managed as part of the return
                 QuadTree quadTree = openQuadTree();
                 if ((quadTree != null) && !bbox.contains(quadTree.getRoot().getBounds())) {
                     tmp = quadTree.search(bbox);
@@ -345,10 +346,8 @@ class IndexManager {
 
     /**
      * Convenience method for opening a QuadTree index.
-     * 
+     *
      * @return A new QuadTree
-     * 
-     * @throws StoreException
      */
     protected QuadTree openQuadTree() throws StoreException {
         if (!shpFiles.isLocal()) {
@@ -356,7 +355,7 @@ class IndexManager {
         }
         URL treeURL = shpFiles.acquireRead(QIX, writer);
         try {
-            File treeFile = DataUtilities.urlToFile(treeURL);
+            File treeFile = URLs.urlToFile(treeURL);
 
             if (!treeFile.exists() || (treeFile.length() == 0)) {
                 return null;
