@@ -2,7 +2,7 @@
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
  *
- *    (C) 2005-2008, Open Source Geospatial Foundation (OSGeo)
+ *    (C) 2005-2015, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
@@ -21,33 +21,28 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.NoSuchElementException;
-
-import org.geotools.data.shapefile.index.CloseableIterator;
+import org.geotools.data.CloseableIterator;
 import org.geotools.data.shapefile.index.Data;
 import org.geotools.data.shapefile.index.DataDefinition;
 import org.geotools.data.shapefile.shp.IndexFile;
-
-import com.vividsolutions.jts.geom.Envelope;
+import org.locationtech.jts.geom.Envelope;
 
 /**
- * Iterator that search the quad tree depth first. 32000 indices are cached at a
- * time and each time a node is visited the indices are removed from the node so
- * that the memory footprint is kept small. Note that if other iterators operate
- * on the same tree then they can interfere with each other.
- * 
+ * Iterator that search the quad tree depth first. 32000 indices are cached at a time and each time
+ * a node is visited the indices are removed from the node so that the memory footprint is kept
+ * small. Note that if other iterators operate on the same tree then they can interfere with each
+ * other.
+ *
  * @author Jesse
- *
- *
- *
- * @source $URL$
  */
 public class LazySearchIterator implements CloseableIterator<Data> {
-    
+
     static final int[] ZERO = new int[0];
 
     static final DataDefinition DATA_DEFINITION = new DataDefinition("US-ASCII");
 
     private static final int MAX_INDICES = 32768;
+
     static {
         DATA_DEFINITION.addField(Integer.class);
         DATA_DEFINITION.addField(Long.class);
@@ -63,12 +58,12 @@ public class LazySearchIterator implements CloseableIterator<Data> {
 
     private Envelope bounds;
 
-    Iterator data;
+    Iterator<Data> data;
 
     private IndexFile indexfile;
-    
+
     ArrayList<Node> parents = new ArrayList<Node>();
-    
+
     Indices indices = new Indices();
 
     QuadTree tree;
@@ -82,31 +77,28 @@ public class LazySearchIterator implements CloseableIterator<Data> {
         this.bounds = bounds;
         this.closed = false;
         this.next = null;
-        this.indexfile = indexfile;
     }
 
     public boolean hasNext() {
-        if (closed)
-            throw new IllegalStateException("Iterator has been closed!");
-        if (next != null)
-            return true;
+        if (closed) throw new IllegalStateException("Iterator has been closed!");
+        if (next != null) return true;
         if (data != null && data.hasNext()) {
             next = (Data) data.next();
         } else {
             data = null;
             fillCache();
-            if (data != null && data.hasNext())
-                next = (Data) data.next();
+            if (data != null && data.hasNext()) next = (Data) data.next();
         }
         return next != null;
     }
 
     private void fillCache() {
         indices.clear();
-        ArrayList dataList = null;
+        ArrayList<Data> dataList = null;
         try {
             while (indices.size() < MAX_INDICES && current != null) {
-                if (idIndex < current.getNumShapeIds() && !current.isVisited()
+                if (idIndex < current.getNumShapeIds()
+                        && !current.isVisited()
                         && current.getBounds().intersects(bounds)) {
                     indices.add(current.getShapeId(idIndex));
                     idIndex++;
@@ -114,12 +106,11 @@ public class LazySearchIterator implements CloseableIterator<Data> {
                     // free the shapes id array of the current node and prepare to move to the next
                     current.setShapesId(new int[0]);
                     idIndex = 0;
-                    
+
                     boolean foundUnvisited = false;
                     for (int i = 0; i < current.getNumSubNodes(); i++) {
                         Node node = current.getSubNode(i);
-                        if (!node.isVisited()
-                                && node.getBounds().intersects(bounds)) {
+                        if (!node.isVisited() && node.getBounds().intersects(bounds)) {
                             foundUnvisited = true;
                             parents.add(current);
                             current = node;
@@ -130,25 +121,23 @@ public class LazySearchIterator implements CloseableIterator<Data> {
                         // mark as visited and free the subnodes
                         current.setVisited(true);
                         current.clean();
-                        
+
                         // move up to parent
-                        if(parents.isEmpty())
-                            current = null;
-                        else
-                            current = parents.remove(parents.size() - 1);
+                        if (parents.isEmpty()) current = null;
+                        else current = parents.remove(parents.size() - 1);
                     }
                 }
             }
-            
+
             // sort so offset lookup is faster
             indices.sort();
             int size = indices.size();
-            dataList = new ArrayList(size);
+            dataList = new ArrayList<>(size);
             for (int i = 0; i < size; i++) {
                 int recno = indices.get(i);
                 Data data = new Data(DATA_DEFINITION);
                 data.addValue(recno + 1);
-                data.addValue(new Long(indexfile.getOffsetInBytes(recno)));
+                data.addValue(Long.valueOf(indexfile.getOffsetInBytes(recno)));
                 dataList.add(data);
             }
         } catch (IOException e) {
@@ -158,8 +147,7 @@ public class LazySearchIterator implements CloseableIterator<Data> {
     }
 
     public Data next() {
-        if (!hasNext())
-            throw new NoSuchElementException("No more elements available");
+        if (!hasNext()) throw new NoSuchElementException("No more elements available");
         Data temp = next;
         next = null;
         return temp;
@@ -175,43 +163,30 @@ public class LazySearchIterator implements CloseableIterator<Data> {
         this.closed = true;
     }
 
-    /**
-     * An efficient wrapper around an array of integers
-     */
+    /** An efficient wrapper around an array of integers */
     class Indices {
-        /**
-         * The current coordinate
-         */
+        /** The current coordinate */
         int curr;
-        
-        /**
-         * The ordinates holder
-         */
+
+        /** The ordinates holder */
         int[] indices;
-        
+
         public Indices() {
             indices = new int[100];
             curr = -1;
         }
-        
-        /**
-         * The number of coordinates
-         * @return
-         */
+
+        /** The number of coordinates */
         int size() {
             return curr + 1;
         }
-        
-        /**
-         * Adds a coordinate to this list
-         * @param x
-         * @param y
-         */
+
+        /** Adds a coordinate to this list */
         void add(int index) {
             curr++;
-            if((curr * 2 + 1) >= indices.length) {
+            if ((curr * 2 + 1) >= indices.length) {
                 int newSize = indices.length * 3 / 2;
-                if(newSize < 10) {
+                if (newSize < 10) {
                     newSize = 10;
                 }
                 int[] resized = new int[newSize];
@@ -220,18 +195,16 @@ public class LazySearchIterator implements CloseableIterator<Data> {
             }
             indices[curr] = index;
         }
-        
-        /**
-         * Resets the indices
-         */
+
+        /** Resets the indices */
         void clear() {
             curr = -1;
         }
-        
+
         int get(int position) {
             return indices[position];
         }
-        
+
         void sort() {
             Arrays.sort(indices, 0, curr + 1);
         }
