@@ -1,7 +1,7 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2008, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
@@ -25,20 +25,15 @@ import org.geotools.data.Parameter;
 
 /**
  * Widget for double values
- * 
+ *
  * @author Andrea Antonello (www.hydrologis.com)
  * @author gdavis
- *
- *
- *
- *
- * @source $URL$
  */
 public class JDoubleField extends ParamField {
 
     private Text text;
 
-    public JDoubleField( Composite parent, Parameter< ? > parameter ) {
+    public JDoubleField(Composite parent, Parameter<?> parameter) {
         super(parent, parameter);
     }
 
@@ -51,16 +46,16 @@ public class JDoubleField extends ParamField {
     public Object getValue() {
         String val = text.getText();
         if (val == null || val.equals("")) {
-            return new Double(0);
+            return Double.valueOf(0);
         }
         try {
-            return new Double(val);
+            return Double.valueOf(val);
         } catch (NumberFormatException e) {
-            return new Double(0);
+            return Double.valueOf(0);
         }
     }
 
-    public void setValue( Object value ) {
+    public void setValue(Object value) {
         text.setText(((Double) value).toString());
     }
 
@@ -73,5 +68,4 @@ public class JDoubleField extends ParamField {
             return false;
         }
     }
-
 }
